need to do the shitty work now

--- a/scrape-wiki/data/html/0004.html
+++ b/scrape-wiki/data/html/0004.html
@@ -9,7 +9,7 @@
    document.documentElement.className = document.documentElement.className.replace( /(^|\s)client-nojs(\s|$)/, "$1client-js$2" );
   </script>
   <script>
-   (window.RLQ=window.RLQ||[]).push(function(){mw.config.set({"wgCanonicalNamespace":"","wgCanonicalSpecialPageName":false,"wgNamespaceNumber":0,"wgPageName":"Arrack","wgTitle":"Arrack","wgCurRevisionId":880668096,"wgRevisionId":880668096,"wgArticleId":1848091,"wgIsArticle":true,"wgIsRedirect":false,"wgAction":"view","wgUserName":null,"wgUserGroups":["*"],"wgCategories":["Webarchive template wayback links","Pages using deprecated image syntax","Articles with hRecipes","Articles with hProducts","Wikipedia articles incorporating a citation from the 1911 Encyclopaedia Britannica with Wikisource reference","Distilled drinks","Indonesian alcoholic drinks","Sri Lankan distilled drinks","Philippine alcoholic drinks","Alcohol in Kerala"],"wgBreakFrames":false,"wgPageContentLanguage":"en","wgPageContentModel":"wikitext","wgSeparatorTransformTable":["",""],"wgDigitTransformTable":["",""],"wgDefaultDateFormat":"dmy","wgMonthNames":["","January","February","March","April","May","June","July","August","September","October","November","December"],"wgMonthNamesShort":["","Jan","Feb","Mar","Apr","May","Jun","Jul","Aug","Sep","Oct","Nov","Dec"],"wgRelevantPageName":"Arrack","wgRelevantArticleId":1848091,"wgRequestId":"XFH47wpAMFwAAHNTgCAAAAAT","wgCSPNonce":false,"wgIsProbablyEditable":true,"wgRelevantPageIsProbablyEditable":true,"wgRestrictionEdit":[],"wgRestrictionMove":[],"wgFlaggedRevsParams":{"tags":{}},"wgStableRevisionId":null,"wgCategoryTreePageCategoryOptions":"{\"mode\":0,\"hideprefix\":20,\"showcount\":true,\"namespaces\":false}","wgWikiEditorEnabledModules":[],"wgBetaFeaturesFeatures":[],"wgMediaViewerOnClick":true,"wgMediaViewerEnabledByDefault":true,"wgPopupsShouldSendModuleToUser":true,"wgPopupsConflictsWithNavPopupGadget":false,"wgVisualEditor":{"pageLanguageCode":"en","pageLanguageDir":"ltr","pageVariantFallbacks":"en","usePageImages":true,"usePageDescriptions":true},"wgMFExpandAllSectionsUserOption":true,"wgMFEnableFontChanger":true,"wgMFDisplayWikibaseDescriptions":{"search":true,"nearby":true,"watchlist":true,"tagline":false},"wgRelatedArticles":null,"wgRelatedArticlesUseCirrusSearch":true,"wgRelatedArticlesOnlyUseCirrusSearch":false,"wgWMESchemaEditAttemptStepOversample":false,"wgPoweredByHHVM":true,"wgULSCurrentAutonym":"English","wgNoticeProject":"wikipedia","wgCentralNoticeCookiesToDelete":[],"wgCentralNoticeCategoriesUsingLegacy":["Fundraising","fundraising"],"wgWikibaseItemId":"Q1458114","wgScoreNoteLanguages":{"arabic":"العربية","catalan":"català","deutsch":"Deutsch","english":"English","espanol":"español","italiano":"italiano","nederlands":"Nederlands","norsk":"norsk","portugues":"português","suomi":"suomi","svenska":"svenska","vlaams":"West-Vlams"},"wgScoreDefaultNoteLanguage":"nederlands","wgCentralAuthMobileDomain":false,"wgCodeMirrorEnabled":true,"wgVisualEditorToolbarScrollOffset":0,"wgVisualEditorUnsupportedEditParams":["undo","undoafter","veswitched"],"wgEditSubmitButtonLabelPublish":true,"oresWikiId":"enwiki","oresBaseUrl":"http://ores.discovery.wmnet:8081/","oresApiVersion":3});mw.loader.state({"ext.gadget.charinsert-styles":"ready","ext.globalCssJs.user.styles":"ready","ext.globalCssJs.site.styles":"ready","site.styles":"ready","noscript":"ready","user.styles":"ready","ext.globalCssJs.user":"ready","ext.globalCssJs.site":"ready","user":"ready","user.options":"ready","user.tokens":"loading","ext.cite.styles":"ready","mediawiki.legacy.shared":"ready","mediawiki.legacy.commonPrint":"ready","mediawiki.toc.styles":"ready","wikibase.client.init":"ready","ext.visualEditor.desktopArticleTarget.noscript":"ready","ext.uls.interlanguage":"ready","ext.wikimediaBadges":"ready","ext.3d.styles":"ready","mediawiki.skinning.interface":"ready","skins.vector.styles":"ready"});mw.loader.implement("user.tokens@0tffind",function($,jQuery,require,module){/*@nomin*/mw.user.tokens.set({"editToken":"+\\","patrolToken":"+\\","watchToken":"+\\","csrfToken":"+\\"});
+   (window.RLQ=window.RLQ||[]).push(function(){mw.config.set({"wgCanonicalNamespace":"","wgCanonicalSpecialPageName":false,"wgNamespaceNumber":0,"wgPageName":"Arrack","wgTitle":"Arrack","wgCurRevisionId":881235998,"wgRevisionId":881235998,"wgArticleId":1848091,"wgIsArticle":true,"wgIsRedirect":false,"wgAction":"view","wgUserName":null,"wgUserGroups":["*"],"wgCategories":["Webarchive template wayback links","Pages using deprecated image syntax","Articles with hRecipes","Articles with hProducts","Wikipedia articles incorporating a citation from the 1911 Encyclopaedia Britannica with Wikisource reference","Distilled drinks","Indonesian alcoholic drinks","Sri Lankan distilled drinks","Philippine alcoholic drinks","Alcohol in Kerala"],"wgBreakFrames":false,"wgPageContentLanguage":"en","wgPageContentModel":"wikitext","wgSeparatorTransformTable":["",""],"wgDigitTransformTable":["",""],"wgDefaultDateFormat":"dmy","wgMonthNames":["","January","February","March","April","May","June","July","August","September","October","November","December"],"wgMonthNamesShort":["","Jan","Feb","Mar","Apr","May","Jun","Jul","Aug","Sep","Oct","Nov","Dec"],"wgRelevantPageName":"Arrack","wgRelevantArticleId":1848091,"wgRequestId":"XFP41QpAMEsAAHfsVE0AAABC","wgCSPNonce":false,"wgIsProbablyEditable":true,"wgRelevantPageIsProbablyEditable":true,"wgRestrictionEdit":[],"wgRestrictionMove":[],"wgFlaggedRevsParams":{"tags":{}},"wgStableRevisionId":null,"wgCategoryTreePageCategoryOptions":"{\"mode\":0,\"hideprefix\":20,\"showcount\":true,\"namespaces\":false}","wgWikiEditorEnabledModules":[],"wgBetaFeaturesFeatures":[],"wgMediaViewerOnClick":true,"wgMediaViewerEnabledByDefault":true,"wgPopupsShouldSendModuleToUser":true,"wgPopupsConflictsWithNavPopupGadget":false,"wgVisualEditor":{"pageLanguageCode":"en","pageLanguageDir":"ltr","pageVariantFallbacks":"en","usePageImages":true,"usePageDescriptions":true},"wgMFExpandAllSectionsUserOption":true,"wgMFEnableFontChanger":true,"wgMFDisplayWikibaseDescriptions":{"search":true,"nearby":true,"watchlist":true,"tagline":false},"wgRelatedArticles":null,"wgRelatedArticlesUseCirrusSearch":true,"wgRelatedArticlesOnlyUseCirrusSearch":false,"wgWMESchemaEditAttemptStepOversample":false,"wgPoweredByHHVM":true,"wgULSCurrentAutonym":"English","wgNoticeProject":"wikipedia","wgCentralNoticeCookiesToDelete":[],"wgCentralNoticeCategoriesUsingLegacy":["Fundraising","fundraising"],"wgWikibaseItemId":"Q1458114","wgScoreNoteLanguages":{"arabic":"العربية","catalan":"català","deutsch":"Deutsch","english":"English","espanol":"español","italiano":"italiano","nederlands":"Nederlands","norsk":"norsk","portugues":"português","suomi":"suomi","svenska":"svenska","vlaams":"West-Vlams"},"wgScoreDefaultNoteLanguage":"nederlands","wgCentralAuthMobileDomain":false,"wgCodeMirrorEnabled":true,"wgVisualEditorToolbarScrollOffset":0,"wgVisualEditorUnsupportedEditParams":["undo","undoafter","veswitched"],"wgEditSubmitButtonLabelPublish":true,"oresWikiId":"enwiki","oresBaseUrl":"http://ores.discovery.wmnet:8081/","oresApiVersion":3});mw.loader.state({"ext.gadget.charinsert-styles":"ready","ext.globalCssJs.user.styles":"ready","ext.globalCssJs.site.styles":"ready","site.styles":"ready","noscript":"ready","user.styles":"ready","ext.globalCssJs.user":"ready","ext.globalCssJs.site":"ready","user":"ready","user.options":"ready","user.tokens":"loading","ext.cite.styles":"ready","mediawiki.legacy.shared":"ready","mediawiki.legacy.commonPrint":"ready","mediawiki.toc.styles":"ready","wikibase.client.init":"ready","ext.visualEditor.desktopArticleTarget.noscript":"ready","ext.uls.interlanguage":"ready","ext.wikimediaBadges":"ready","ext.3d.styles":"ready","mediawiki.skinning.interface":"ready","skins.vector.styles":"ready"});mw.loader.implement("user.tokens@0tffind",function($,jQuery,require,module){/*@nomin*/mw.user.tokens.set({"editToken":"+\\","patrolToken":"+\\","watchToken":"+\\","csrfToken":"+\\"});
 });RLPAGEMODULES=["ext.cite.ux-enhancements","ext.scribunto.logs","site","mediawiki.page.startup","mediawiki.page.ready","mediawiki.toc","mediawiki.searchSuggest","ext.gadget.teahouse","ext.gadget.ReferenceTooltips","ext.gadget.watchlist-notice","ext.gadget.DRN-wizard","ext.gadget.charinsert","ext.gadget.refToolbar","ext.gadget.extra-toolbar-buttons","ext.gadget.switcher","ext.centralauth.centralautologin","mmv.head","mmv.bootstrap.autostart","ext.popups","ext.visualEditor.desktopArticleTarget.init","ext.visualEditor.targetLoader","ext.eventLogging","ext.wikimediaEvents","ext.navigationTiming","ext.uls.eventlogger","ext.uls.init","ext.uls.compactlinks","ext.uls.interface","ext.quicksurveys.init","ext.centralNotice.geoIP","ext.centralNotice.startUp","skins.vector.js"];mw.loader.load(RLPAGEMODULES);});
   </script>
   <link href="/w/load.php?debug=false&amp;lang=en&amp;modules=ext.3d.styles%7Cext.cite.styles%7Cext.uls.interlanguage%7Cext.visualEditor.desktopArticleTarget.noscript%7Cext.wikimediaBadges%7Cmediawiki.legacy.commonPrint%2Cshared%7Cmediawiki.skinning.interface%7Cmediawiki.toc.styles%7Cskins.vector.styles%7Cwikibase.client.init&amp;only=styles&amp;skin=vector" rel="stylesheet"/>
@@ -174,7 +174,15 @@
        in their presentation.
       </p>
       <p>
-       Arrack predates all "New World" spirits, as it is a parent to cachaça (which was in turn the parent of rum, rhum agricole, and ron).
+       Arrack predates all "New World" spirits, as it is a parent to
+       <a href="/wiki/Cacha%C3%A7a" title="Cachaça">
+        cachaça
+       </a>
+       (which was in turn the parent of
+       <a href="/wiki/Rum" title="Rum">
+        rum
+       </a>
+       , rhum agricole, and ron).
        <sup class="reference" id="cite_ref-3">
         <a href="#cite_note-3">
          [3]
@@ -186,7 +194,11 @@
          [4]
         </a>
        </sup>
-       It is also claimed to have been distilled in India in 800 BC, but while palm wine and fermented sugar-cane drinks were being made around this time period not all believe that formal distallation was taking place.
+       It is also claimed to have been distilled in India in 800 BC, but while
+       <a href="/wiki/Palm_wine" title="Palm wine">
+        palm wine
+       </a>
+       and fermented sugar-cane drinks were being made around this time period not all believe that formal distallation was taking place.
        <sup class="reference" id="cite_ref-5">
         <a href="#cite_note-5">
          [5]
@@ -205,9 +217,6 @@
         </a>
        </sup>
        , but is now mostly confused with the more common and similar sounding anise flavored spirit Arak.
-      </p>
-      <p>
-       <br/>
       </p>
       <div class="toc" id="toc">
        <input class="toctogglecheckbox" id="toctogglecheckbox" role="button" style="display:none" type="checkbox"/>
@@ -4966,13 +4975,13 @@
       </div>
       <!-- 
 NewPP limit report
-Parsed by mw1257
-Cached time: 20190130192015
+Parsed by mw1305
+Cached time: 20190201074402
 Cache expiry: 2073600
 Dynamic content: false
-CPU time usage: 0.556 seconds
-Real time usage: 0.684 seconds
-Preprocessor visited node count: 2168/1000000
+CPU time usage: 0.612 seconds
+Real time usage: 0.729 seconds
+Preprocessor visited node count: 2171/1000000
 Preprocessor generated node count: 0/1500000
 Post‐expand include size: 127271/2097152 bytes
 Template argument size: 2908/2097152 bytes
@@ -4981,23 +4990,23 @@ Expensive parser function count: 6/500
 Unstrip recursion depth: 1/20
 Unstrip post‐expand size: 73802/5000000 bytes
 Number of Wikibase entities loaded: 0/400
-Lua time usage: 0.234/10.000 seconds
-Lua memory usage: 4.69 MB/50 MB
+Lua time usage: 0.254/10.000 seconds
+Lua memory usage: 4.7 MB/50 MB
 -->
       <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%  466.666      1 -total
- 43.36%  202.369      1 Template:Reflist
- 20.80%   97.087      9 Template:Cite_web
-  9.70%   45.256      1 Template:About
-  8.29%   38.693      1 Template:Infobox_beverage
-  7.96%   37.168      1 Template:Alcoholic_beverages
-  7.75%   36.147      8 Template:Cite_news
-  6.98%   32.556      1 Template:Infobox
-  6.94%   32.376      7 Template:Cite_book
-  6.84%   31.939      6 Template:Navbox
+100.00%  505.302      1 -total
+ 41.99%  212.175      1 Template:Reflist
+ 21.06%  106.427      9 Template:Cite_web
+ 11.17%   56.426      1 Template:About
+  8.23%   41.582      1 Template:Alcoholic_beverages
+  7.41%   37.461      8 Template:Cite_news
+  7.26%   36.660      1 Template:Infobox_beverage
+  7.17%   36.252      1 Template:Navbox_with_collapsible_groups
+  6.69%   33.780      6 Template:Navbox
+  6.54%   33.038      1 Template:Indian_cuisine
 -->
-      <!-- Saved in parser cache with key enwiki:pcache:idhash:1848091-0!canonical and timestamp 20190130192015 and revision id 880668096
+      <!-- Saved in parser cache with key enwiki:pcache:idhash:1848091-0!canonical and timestamp 20190201074402 and revision id 881235998
  -->
      </div>
      <noscript>
@@ -5006,8 +5015,8 @@ Transclusion expansion time report (%,ms,calls,template)
     </div>
     <div class="printfooter">
      Retrieved from "
-     <a dir="ltr" href="https://en.wikipedia.org/w/index.php?title=Arrack&amp;oldid=880668096">
-      https://en.wikipedia.org/w/index.php?title=Arrack&amp;oldid=880668096
+     <a dir="ltr" href="https://en.wikipedia.org/w/index.php?title=Arrack&amp;oldid=881235998">
+      https://en.wikipedia.org/w/index.php?title=Arrack&amp;oldid=881235998
      </a>
      "
     </div>
@@ -5314,7 +5323,7 @@ Transclusion expansion time report (%,ms,calls,template)
         </a>
        </li>
        <li id="t-permalink">
-        <a href="/w/index.php?title=Arrack&amp;oldid=880668096" title="Permanent link to this revision of the page">
+        <a href="/w/index.php?title=Arrack&amp;oldid=881235998" title="Permanent link to this revision of the page">
          Permanent link
         </a>
        </li>
@@ -5329,7 +5338,7 @@ Transclusion expansion time report (%,ms,calls,template)
         </a>
        </li>
        <li id="t-cite">
-        <a href="/w/index.php?title=Special:CiteThisPage&amp;page=Arrack&amp;id=880668096" title="Information on how to cite this page">
+        <a href="/w/index.php?title=Special:CiteThisPage&amp;page=Arrack&amp;id=881235998" title="Information on how to cite this page">
          Cite this page
         </a>
        </li>
@@ -5495,7 +5504,7 @@ Transclusion expansion time report (%,ms,calls,template)
   <div id="footer" role="contentinfo">
    <ul id="footer-info">
     <li id="footer-info-lastmod">
-     This page was last edited on 28 January 2019, at 18:44
+     This page was last edited on 1 February 2019, at 07:44
      <span class="anonymous-show">
       (UTC)
      </span>
@@ -5577,7 +5586,7 @@ additional terms may apply.  By using this site, you agree to the
    </div>
   </div>
   <script>
-   (window.RLQ=window.RLQ||[]).push(function(){mw.config.set({"wgPageParseReport":{"limitreport":{"cputime":"0.556","walltime":"0.684","ppvisitednodes":{"value":2168,"limit":1000000},"ppgeneratednodes":{"value":0,"limit":1500000},"postexpandincludesize":{"value":127271,"limit":2097152},"templateargumentsize":{"value":2908,"limit":2097152},"expansiondepth":{"value":7,"limit":40},"expensivefunctioncount":{"value":6,"limit":500},"unstrip-depth":{"value":1,"limit":20},"unstrip-size":{"value":73802,"limit":5000000},"entityaccesscount":{"value":0,"limit":400},"timingprofile":["100.00%  466.666      1 -total"," 43.36%  202.369      1 Template:Reflist"," 20.80%   97.087      9 Template:Cite_web","  9.70%   45.256      1 Template:About","  8.29%   38.693      1 Template:Infobox_beverage","  7.96%   37.168      1 Template:Alcoholic_beverages","  7.75%   36.147      8 Template:Cite_news","  6.98%   32.556      1 Template:Infobox","  6.94%   32.376      7 Template:Cite_book","  6.84%   31.939      6 Template:Navbox"]},"scribunto":{"limitreport-timeusage":{"value":"0.234","limit":"10.000"},"limitreport-memusage":{"value":4919786,"limit":52428800},"limitreport-logs":"table#1 {\n  [\"size\"] = \"tiny\",\n}\ntable#1 {\n  [\"size\"] = \"tiny\",\n}\ntable#1 {\n  [\"size\"] = \"tiny\",\n}\ntable#1 {\n  [\"size\"] = \"tiny\",\n}\ntable#1 {\n  [\"size\"] = \"tiny\",\n}\ntable#1 {\n  [\"size\"] = \"tiny\",\n}\n"},"cachereport":{"origin":"mw1257","timestamp":"20190130192015","ttl":2073600,"transientcontent":false}}});mw.config.set({"wgBackendResponseTime":803,"wgHostname":"mw1257"});});
+   (window.RLQ=window.RLQ||[]).push(function(){mw.config.set({"wgPageParseReport":{"limitreport":{"cputime":"0.612","walltime":"0.729","ppvisitednodes":{"value":2171,"limit":1000000},"ppgeneratednodes":{"value":0,"limit":1500000},"postexpandincludesize":{"value":127271,"limit":2097152},"templateargumentsize":{"value":2908,"limit":2097152},"expansiondepth":{"value":7,"limit":40},"expensivefunctioncount":{"value":6,"limit":500},"unstrip-depth":{"value":1,"limit":20},"unstrip-size":{"value":73802,"limit":5000000},"entityaccesscount":{"value":0,"limit":400},"timingprofile":["100.00%  505.302      1 -total"," 41.99%  212.175      1 Template:Reflist"," 21.06%  106.427      9 Template:Cite_web"," 11.17%   56.426      1 Template:About","  8.23%   41.582      1 Template:Alcoholic_beverages","  7.41%   37.461      8 Template:Cite_news","  7.26%   36.660      1 Template:Infobox_beverage","  7.17%   36.252      1 Template:Navbox_with_collapsible_groups","  6.69%   33.780      6 Template:Navbox","  6.54%   33.038      1 Template:Indian_cuisine"]},"scribunto":{"limitreport-timeusage":{"value":"0.254","limit":"10.000"},"limitreport-memusage":{"value":4927843,"limit":52428800},"limitreport-logs":"table#1 {\n  [\"size\"] = \"tiny\",\n}\ntable#1 {\n  [\"size\"] = \"tiny\",\n}\ntable#1 {\n  [\"size\"] = \"tiny\",\n}\ntable#1 {\n  [\"size\"] = \"tiny\",\n}\ntable#1 {\n  [\"size\"] = \"tiny\",\n}\ntable#1 {\n  [\"size\"] = \"tiny\",\n}\n"},"cachereport":{"origin":"mw1305","timestamp":"20190201074402","ttl":2073600,"transientcontent":false}}});mw.config.set({"wgBackendResponseTime":98,"wgHostname":"mw1240"});});
   </script>
  </body>
 </html>
