--- a/scrape-wiki/data/html/0532.html
+++ b/scrape-wiki/data/html/0532.html
@@ -9,7 +9,7 @@
    document.documentElement.className = document.documentElement.className.replace( /(^|\s)client-nojs(\s|$)/, "$1client-js$2" );
   </script>
   <script>
-   (window.RLQ=window.RLQ||[]).push(function(){mw.config.set({"wgCanonicalNamespace":"Category","wgCanonicalSpecialPageName":false,"wgNamespaceNumber":14,"wgPageName":"Category:Commons_category_link_is_locally_defined","wgTitle":"Commons category link is locally defined","wgCurRevisionId":876451108,"wgRevisionId":876451108,"wgArticleId":59055142,"wgIsArticle":true,"wgIsRedirect":false,"wgAction":"view","wgUserName":null,"wgUserGroups":["*"],"wgCategories":["Hidden categories","Tracking categories","Commons category Wikidata tracking categories","Wikipedia categories tracking Wikidata differences"],"wgBreakFrames":false,"wgPageContentLanguage":"en","wgPageContentModel":"wikitext","wgSeparatorTransformTable":["",""],"wgDigitTransformTable":["",""],"wgDefaultDateFormat":"dmy","wgMonthNames":["","January","February","March","April","May","June","July","August","September","October","November","December"],"wgMonthNamesShort":["","Jan","Feb","Mar","Apr","May","Jun","Jul","Aug","Sep","Oct","Nov","Dec"],"wgRelevantPageName":"Category:Commons_category_link_is_locally_defined","wgRelevantArticleId":59055142,"wgRequestId":"XFO8jgpAMFwAAJdyY3cAAACG","wgCSPNonce":false,"wgIsProbablyEditable":true,"wgRelevantPageIsProbablyEditable":true,"wgRestrictionEdit":[],"wgRestrictionMove":[],"wgFlaggedRevsParams":{"tags":{}},"wgStableRevisionId":null,"wgCategoryTreePageCategoryOptions":"{\"mode\":0,\"hideprefix\":20,\"showcount\":true,\"namespaces\":false}","wgWikiEditorEnabledModules":[],"wgBetaFeaturesFeatures":[],"wgMediaViewerOnClick":true,"wgMediaViewerEnabledByDefault":true,"wgPopupsShouldSendModuleToUser":true,"wgPopupsConflictsWithNavPopupGadget":false,"wgVisualEditor":{"pageLanguageCode":"en","pageLanguageDir":"ltr","pageVariantFallbacks":"en","usePageImages":true,"usePageDescriptions":true},"wgMFExpandAllSectionsUserOption":true,"wgMFEnableFontChanger":true,"wgMFDisplayWikibaseDescriptions":{"search":true,"nearby":true,"watchlist":true,"tagline":false},"wgRelatedArticles":null,"wgRelatedArticlesUseCirrusSearch":true,"wgRelatedArticlesOnlyUseCirrusSearch":false,"wgWMESchemaEditAttemptStepOversample":false,"wgPoweredByHHVM":true,"wgULSCurrentAutonym":"English","wgNoticeProject":"wikipedia","wgCentralNoticeCookiesToDelete":[],"wgCentralNoticeCategoriesUsingLegacy":["Fundraising","fundraising"],"wgWikibaseItemId":"Q59244176","wgScoreNoteLanguages":{"arabic":"العربية","catalan":"català","deutsch":"Deutsch","english":"English","espanol":"español","italiano":"italiano","nederlands":"Nederlands","norsk":"norsk","portugues":"português","suomi":"suomi","svenska":"svenska","vlaams":"West-Vlams"},"wgScoreDefaultNoteLanguage":"nederlands","wgCentralAuthMobileDomain":false,"wgCodeMirrorEnabled":true,"wgVisualEditorToolbarScrollOffset":0,"wgVisualEditorUnsupportedEditParams":["undo","undoafter","veswitched"],"wgEditSubmitButtonLabelPublish":true,"oresWikiId":"enwiki","oresBaseUrl":"http://ores.discovery.wmnet:8081/","oresApiVersion":3});mw.loader.state({"ext.gadget.charinsert-styles":"ready","ext.globalCssJs.user.styles":"ready","ext.globalCssJs.site.styles":"ready","site.styles":"ready","noscript":"ready","user.styles":"ready","ext.globalCssJs.user":"ready","ext.globalCssJs.site":"ready","user":"ready","user.options":"ready","user.tokens":"loading","mediawiki.action.view.categoryPage.styles":"ready","ext.categoryTree.styles":"ready","mediawiki.helplink":"ready","mediawiki.legacy.shared":"ready","mediawiki.legacy.commonPrint":"ready","wikibase.client.init":"ready","ext.visualEditor.desktopArticleTarget.noscript":"ready","ext.uls.interlanguage":"ready","ext.wikimediaBadges":"ready","ext.3d.styles":"ready","ext.tmh.thumbnail.styles":"ready","mediawiki.skinning.interface":"ready","skins.vector.styles":"ready"});mw.loader.implement("user.tokens@0tffind",function($,jQuery,require,module){/*@nomin*/mw.user.tokens.set({"editToken":"+\\","patrolToken":"+\\","watchToken":"+\\","csrfToken":"+\\"});
+   (window.RLQ=window.RLQ||[]).push(function(){mw.config.set({"wgCanonicalNamespace":"Category","wgCanonicalSpecialPageName":false,"wgNamespaceNumber":14,"wgPageName":"Category:Commons_category_link_is_locally_defined","wgTitle":"Commons category link is locally defined","wgCurRevisionId":876451108,"wgRevisionId":876451108,"wgArticleId":59055142,"wgIsArticle":true,"wgIsRedirect":false,"wgAction":"view","wgUserName":null,"wgUserGroups":["*"],"wgCategories":["Hidden categories","Tracking categories","Commons category Wikidata tracking categories","Wikipedia categories tracking Wikidata differences"],"wgBreakFrames":false,"wgPageContentLanguage":"en","wgPageContentModel":"wikitext","wgSeparatorTransformTable":["",""],"wgDigitTransformTable":["",""],"wgDefaultDateFormat":"dmy","wgMonthNames":["","January","February","March","April","May","June","July","August","September","October","November","December"],"wgMonthNamesShort":["","Jan","Feb","Mar","Apr","May","Jun","Jul","Aug","Sep","Oct","Nov","Dec"],"wgRelevantPageName":"Category:Commons_category_link_is_locally_defined","wgRelevantArticleId":59055142,"wgRequestId":"XFQRrQpAADgAAGAhpnkAAABO","wgCSPNonce":false,"wgIsProbablyEditable":true,"wgRelevantPageIsProbablyEditable":true,"wgRestrictionEdit":[],"wgRestrictionMove":[],"wgFlaggedRevsParams":{"tags":{}},"wgStableRevisionId":null,"wgCategoryTreePageCategoryOptions":"{\"mode\":0,\"hideprefix\":20,\"showcount\":true,\"namespaces\":false}","wgWikiEditorEnabledModules":[],"wgBetaFeaturesFeatures":[],"wgMediaViewerOnClick":true,"wgMediaViewerEnabledByDefault":true,"wgPopupsShouldSendModuleToUser":true,"wgPopupsConflictsWithNavPopupGadget":false,"wgVisualEditor":{"pageLanguageCode":"en","pageLanguageDir":"ltr","pageVariantFallbacks":"en","usePageImages":true,"usePageDescriptions":true},"wgMFExpandAllSectionsUserOption":true,"wgMFEnableFontChanger":true,"wgMFDisplayWikibaseDescriptions":{"search":true,"nearby":true,"watchlist":true,"tagline":false},"wgRelatedArticles":null,"wgRelatedArticlesUseCirrusSearch":true,"wgRelatedArticlesOnlyUseCirrusSearch":false,"wgWMESchemaEditAttemptStepOversample":false,"wgPoweredByHHVM":true,"wgULSCurrentAutonym":"English","wgNoticeProject":"wikipedia","wgCentralNoticeCookiesToDelete":[],"wgCentralNoticeCategoriesUsingLegacy":["Fundraising","fundraising"],"wgWikibaseItemId":"Q59244176","wgScoreNoteLanguages":{"arabic":"العربية","catalan":"català","deutsch":"Deutsch","english":"English","espanol":"español","italiano":"italiano","nederlands":"Nederlands","norsk":"norsk","portugues":"português","suomi":"suomi","svenska":"svenska","vlaams":"West-Vlams"},"wgScoreDefaultNoteLanguage":"nederlands","wgCentralAuthMobileDomain":false,"wgCodeMirrorEnabled":true,"wgVisualEditorToolbarScrollOffset":0,"wgVisualEditorUnsupportedEditParams":["undo","undoafter","veswitched"],"wgEditSubmitButtonLabelPublish":true,"oresWikiId":"enwiki","oresBaseUrl":"http://ores.discovery.wmnet:8081/","oresApiVersion":3});mw.loader.state({"ext.gadget.charinsert-styles":"ready","ext.globalCssJs.user.styles":"ready","ext.globalCssJs.site.styles":"ready","site.styles":"ready","noscript":"ready","user.styles":"ready","ext.globalCssJs.user":"ready","ext.globalCssJs.site":"ready","user":"ready","user.options":"ready","user.tokens":"loading","mediawiki.action.view.categoryPage.styles":"ready","ext.categoryTree.styles":"ready","mediawiki.helplink":"ready","mediawiki.legacy.shared":"ready","mediawiki.legacy.commonPrint":"ready","wikibase.client.init":"ready","ext.visualEditor.desktopArticleTarget.noscript":"ready","ext.uls.interlanguage":"ready","ext.wikimediaBadges":"ready","ext.3d.styles":"ready","ext.tmh.thumbnail.styles":"ready","mediawiki.skinning.interface":"ready","skins.vector.styles":"ready"});mw.loader.implement("user.tokens@0tffind",function($,jQuery,require,module){/*@nomin*/mw.user.tokens.set({"editToken":"+\\","patrolToken":"+\\","watchToken":"+\\","csrfToken":"+\\"});
 });RLPAGEMODULES=["ext.categoryTree","site","mediawiki.page.startup","mediawiki.page.ready","mediawiki.searchSuggest","ext.gadget.teahouse","ext.gadget.ReferenceTooltips","ext.gadget.watchlist-notice","ext.gadget.DRN-wizard","ext.gadget.charinsert","ext.gadget.refToolbar","ext.gadget.extra-toolbar-buttons","ext.gadget.switcher","ext.centralauth.centralautologin","mmv.head","mmv.bootstrap.autostart","ext.popups","ext.visualEditor.desktopArticleTarget.init","ext.visualEditor.targetLoader","ext.eventLogging","ext.wikimediaEvents","ext.navigationTiming","ext.uls.eventlogger","ext.uls.init","ext.uls.compactlinks","ext.uls.interface","ext.centralNotice.geoIP","ext.centralNotice.startUp","mw.MediaWikiPlayer.loader","mw.PopUpMediaTransform","skins.vector.js"];mw.loader.load(RLPAGEMODULES);});
   </script>
   <link href="/w/load.php?debug=false&amp;lang=en&amp;modules=ext.3d.styles%7Cext.categoryTree.styles%7Cext.tmh.thumbnail.styles%7Cext.uls.interlanguage%7Cext.visualEditor.desktopArticleTarget.noscript%7Cext.wikimediaBadges%7Cmediawiki.action.view.categoryPage.styles%7Cmediawiki.helplink%7Cmediawiki.legacy.commonPrint%2Cshared%7Cmediawiki.skinning.interface%7Cskins.vector.styles%7Cwikibase.client.init&amp;only=styles&amp;skin=vector" rel="stylesheet"/>
@@ -776,12 +776,12 @@
       </div>
       <!-- 
 NewPP limit report
-Parsed by mw1257
-Cached time: 20190201032711
+Parsed by mw1324
+Cached time: 20190201092633
 Cache expiry: 2073600
 Dynamic content: false
-CPU time usage: 0.064 seconds
-Real time usage: 0.096 seconds
+CPU time usage: 0.076 seconds
+Real time usage: 0.105 seconds
 Preprocessor visited node count: 199/1000000
 Preprocessor generated node count: 0/1500000
 Post‐expand include size: 37530/2097152 bytes
@@ -791,21 +791,21 @@ Expensive parser function count: 0/500
 Unstrip recursion depth: 0/20
 Unstrip post‐expand size: 0/5000000 bytes
 Number of Wikibase entities loaded: 0/400
-Lua time usage: 0.014/10.000 seconds
+Lua time usage: 0.016/10.000 seconds
 Lua memory usage: 846 KB/50 MB
 -->
       <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   64.112      1 -total
- 66.78%   42.815      1 Template:Empty_category
- 57.02%   36.557      2 Template:Cmbox
- 20.90%   13.397      1 Template:Wikipedia_category
- 12.10%    7.759      1 Template:Large_category_TOC
-  8.61%    5.519      2 Template:Single_namespace
-  5.11%    3.273      3 Template:Category_other
-  4.05%    2.598      3 Template:Yesno
+100.00%   68.199      1 -total
+ 69.99%   47.730      1 Template:Empty_category
+ 64.07%   43.694      2 Template:Cmbox
+ 18.59%   12.675      1 Template:Wikipedia_category
+ 11.24%    7.663      1 Template:Large_category_TOC
+  7.88%    5.373      2 Template:Single_namespace
+  4.92%    3.353      3 Template:Yesno
+  4.56%    3.111      3 Template:Category_other
 -->
-      <!-- Saved in parser cache with key enwiki:pcache:idhash:59055142-0!canonical and timestamp 20190201032710 and revision id 876451108
+      <!-- Saved in parser cache with key enwiki:pcache:idhash:59055142-0!canonical and timestamp 20190201092633 and revision id 876451108
  -->
      </div>
      <div class="mw-category-generated" dir="ltr" lang="en">
@@ -814,7 +814,7 @@ Transclusion expansion time report (%,ms,calls,template)
         Subcategories
        </h2>
        <p>
-        This category has the following 200 subcategories, out of 8,789 total.
+        This category has the following 200 subcategories, out of 8,801 total.
        </p>
        (previous page) (
        <a href="/w/index.php?title=Category:Commons_category_link_is_locally_defined&amp;subcatfrom=Baseball+articles+needing+images#mw-subcategories" title="Category:Commons category link is locally defined">
@@ -4727,7 +4727,7 @@ Transclusion expansion time report (%,ms,calls,template)
         Pages in category "Commons category link is locally defined"
        </h2>
        <p>
-        The following 200 pages are in this category, out of approximately 17,488 total. This list may not reflect recent changes (
+        The following 200 pages are in this category, out of approximately 17,493 total. This list may not reflect recent changes (
         <a href="/wiki/Wikipedia:FAQ/Categorization#Why_might_a_category_list_not_be_up_to_date?" title="Wikipedia:FAQ/Categorization">
          learn more
         </a>
@@ -6206,7 +6206,7 @@ additional terms may apply.  By using this site, you agree to the
    </div>
   </div>
   <script>
-   (window.RLQ=window.RLQ||[]).push(function(){mw.config.set({"wgPageParseReport":{"limitreport":{"cputime":"0.064","walltime":"0.096","ppvisitednodes":{"value":199,"limit":1000000},"ppgeneratednodes":{"value":0,"limit":1500000},"postexpandincludesize":{"value":37530,"limit":2097152},"templateargumentsize":{"value":490,"limit":2097152},"expansiondepth":{"value":10,"limit":40},"expensivefunctioncount":{"value":0,"limit":500},"unstrip-depth":{"value":0,"limit":20},"unstrip-size":{"value":0,"limit":5000000},"entityaccesscount":{"value":0,"limit":400},"timingprofile":["100.00%   64.112      1 -total"," 66.78%   42.815      1 Template:Empty_category"," 57.02%   36.557      2 Template:Cmbox"," 20.90%   13.397      1 Template:Wikipedia_category"," 12.10%    7.759      1 Template:Large_category_TOC","  8.61%    5.519      2 Template:Single_namespace","  5.11%    3.273      3 Template:Category_other","  4.05%    2.598      3 Template:Yesno"]},"scribunto":{"limitreport-timeusage":{"value":"0.014","limit":"10.000"},"limitreport-memusage":{"value":866114,"limit":52428800}},"cachereport":{"origin":"mw1257","timestamp":"20190201032711","ttl":2073600,"transientcontent":false}}});mw.config.set({"wgBackendResponseTime":355,"wgHostname":"mw1257"});});
+   (window.RLQ=window.RLQ||[]).push(function(){mw.config.set({"wgPageParseReport":{"limitreport":{"cputime":"0.076","walltime":"0.105","ppvisitednodes":{"value":199,"limit":1000000},"ppgeneratednodes":{"value":0,"limit":1500000},"postexpandincludesize":{"value":37530,"limit":2097152},"templateargumentsize":{"value":490,"limit":2097152},"expansiondepth":{"value":10,"limit":40},"expensivefunctioncount":{"value":0,"limit":500},"unstrip-depth":{"value":0,"limit":20},"unstrip-size":{"value":0,"limit":5000000},"entityaccesscount":{"value":0,"limit":400},"timingprofile":["100.00%   68.199      1 -total"," 69.99%   47.730      1 Template:Empty_category"," 64.07%   43.694      2 Template:Cmbox"," 18.59%   12.675      1 Template:Wikipedia_category"," 11.24%    7.663      1 Template:Large_category_TOC","  7.88%    5.373      2 Template:Single_namespace","  4.92%    3.353      3 Template:Yesno","  4.56%    3.111      3 Template:Category_other"]},"scribunto":{"limitreport-timeusage":{"value":"0.016","limit":"10.000"},"limitreport-memusage":{"value":866114,"limit":52428800}},"cachereport":{"origin":"mw1324","timestamp":"20190201092633","ttl":2073600,"transientcontent":false}}});mw.config.set({"wgBackendResponseTime":291,"wgHostname":"mw1261"});});
   </script>
  </body>
 </html>
