--- a/scrape-wiki/data/html/0537.html
+++ b/scrape-wiki/data/html/0537.html
@@ -9,7 +9,7 @@
    document.documentElement.className = document.documentElement.className.replace( /(^|\s)client-nojs(\s|$)/, "$1client-js$2" );
   </script>
   <script>
-   (window.RLQ=window.RLQ||[]).push(function(){mw.config.set({"wgCanonicalNamespace":"Portal","wgCanonicalSpecialPageName":false,"wgNamespaceNumber":100,"wgPageName":"Portal:Contents","wgTitle":"Contents","wgCurRevisionId":880463058,"wgRevisionId":880463058,"wgArticleId":40273,"wgIsArticle":true,"wgIsRedirect":false,"wgAction":"view","wgUserName":null,"wgUserGroups":["*"],"wgCategories":["Portals with short description","Wikipedia semi-protected portals","Wikipedia move-protected portals","All portals","Wikipedia directories","Contents","Content portals"],"wgBreakFrames":false,"wgPageContentLanguage":"en","wgPageContentModel":"wikitext","wgSeparatorTransformTable":["",""],"wgDigitTransformTable":["",""],"wgDefaultDateFormat":"dmy","wgMonthNames":["","January","February","March","April","May","June","July","August","September","October","November","December"],"wgMonthNamesShort":["","Jan","Feb","Mar","Apr","May","Jun","Jul","Aug","Sep","Oct","Nov","Dec"],"wgRelevantPageName":"Portal:Contents","wgRelevantArticleId":40273,"wgRequestId":"XE3VPgpAICoAAH4ubwAAAAAD","wgCSPNonce":false,"wgIsProbablyEditable":false,"wgRelevantPageIsProbablyEditable":false,"wgRestrictionEdit":["autoconfirmed"],"wgRestrictionMove":["sysop"],"wgFlaggedRevsParams":{"tags":{}},"wgStableRevisionId":null,"wgCategoryTreePageCategoryOptions":"{\"mode\":0,\"hideprefix\":20,\"showcount\":true,\"namespaces\":false}","wgWikiEditorEnabledModules":[],"wgBetaFeaturesFeatures":[],"wgMediaViewerOnClick":true,"wgMediaViewerEnabledByDefault":true,"wgPopupsShouldSendModuleToUser":true,"wgPopupsConflictsWithNavPopupGadget":false,"wgVisualEditor":{"pageLanguageCode":"en","pageLanguageDir":"ltr","pageVariantFallbacks":"en","usePageImages":true,"usePageDescriptions":true},"wgMFExpandAllSectionsUserOption":true,"wgMFEnableFontChanger":true,"wgMFDisplayWikibaseDescriptions":{"search":true,"nearby":true,"watchlist":true,"tagline":false},"wgRelatedArticles":null,"wgRelatedArticlesUseCirrusSearch":true,"wgRelatedArticlesOnlyUseCirrusSearch":false,"wgWMESchemaEditAttemptStepOversample":false,"wgPoweredByHHVM":true,"wgULSCurrentAutonym":"English","wgNoticeProject":"wikipedia","wgCentralNoticeCookiesToDelete":[],"wgCentralNoticeCategoriesUsingLegacy":["Fundraising","fundraising"],"wgWikibaseItemId":"Q4395506","wgScoreNoteLanguages":{"arabic":"العربية","catalan":"català","deutsch":"Deutsch","english":"English","espanol":"español","italiano":"italiano","nederlands":"Nederlands","norsk":"norsk","portugues":"português","suomi":"suomi","svenska":"svenska","vlaams":"West-Vlams"},"wgScoreDefaultNoteLanguage":"nederlands","wgCentralAuthMobileDomain":false,"wgCodeMirrorEnabled":true,"wgVisualEditorToolbarScrollOffset":0,"wgVisualEditorUnsupportedEditParams":["undo","undoafter","veswitched"],"wgEditSubmitButtonLabelPublish":true,"oresWikiId":"enwiki","oresBaseUrl":"http://ores.discovery.wmnet:8081/","oresApiVersion":3});mw.loader.state({"ext.gadget.charinsert-styles":"ready","ext.globalCssJs.user.styles":"ready","ext.globalCssJs.site.styles":"ready","site.styles":"ready","noscript":"ready","user.styles":"ready","ext.globalCssJs.user":"ready","ext.globalCssJs.site":"ready","user":"ready","user.options":"ready","user.tokens":"loading","mediawiki.legacy.shared":"ready","mediawiki.legacy.commonPrint":"ready","mediawiki.toc.styles":"ready","wikibase.client.init":"ready","ext.visualEditor.desktopArticleTarget.noscript":"ready","ext.uls.interlanguage":"ready","ext.wikimediaBadges":"ready","ext.3d.styles":"ready","mediawiki.skinning.interface":"ready","skins.vector.styles":"ready"});mw.loader.implement("user.tokens@0tffind",function($,jQuery,require,module){/*@nomin*/mw.user.tokens.set({"editToken":"+\\","patrolToken":"+\\","watchToken":"+\\","csrfToken":"+\\"});
+   (window.RLQ=window.RLQ||[]).push(function(){mw.config.set({"wgCanonicalNamespace":"Portal","wgCanonicalSpecialPageName":false,"wgNamespaceNumber":100,"wgPageName":"Portal:Contents","wgTitle":"Contents","wgCurRevisionId":881272802,"wgRevisionId":881272802,"wgArticleId":40273,"wgIsArticle":true,"wgIsRedirect":false,"wgAction":"view","wgUserName":null,"wgUserGroups":["*"],"wgCategories":["Portals with short description","Wikipedia semi-protected portals","Wikipedia move-protected portals","All portals","Wikipedia directories","Contents","Content portals"],"wgBreakFrames":false,"wgPageContentLanguage":"en","wgPageContentModel":"wikitext","wgSeparatorTransformTable":["",""],"wgDigitTransformTable":["",""],"wgDefaultDateFormat":"dmy","wgMonthNames":["","January","February","March","April","May","June","July","August","September","October","November","December"],"wgMonthNamesShort":["","Jan","Feb","Mar","Apr","May","Jun","Jul","Aug","Sep","Oct","Nov","Dec"],"wgRelevantPageName":"Portal:Contents","wgRelevantArticleId":40273,"wgRequestId":"XFRVZgpAAEMAAAgDcFEAAACT","wgCSPNonce":false,"wgIsProbablyEditable":false,"wgRelevantPageIsProbablyEditable":false,"wgRestrictionEdit":["autoconfirmed"],"wgRestrictionMove":["sysop"],"wgFlaggedRevsParams":{"tags":{}},"wgStableRevisionId":null,"wgCategoryTreePageCategoryOptions":"{\"mode\":0,\"hideprefix\":20,\"showcount\":true,\"namespaces\":false}","wgWikiEditorEnabledModules":[],"wgBetaFeaturesFeatures":[],"wgMediaViewerOnClick":true,"wgMediaViewerEnabledByDefault":true,"wgPopupsShouldSendModuleToUser":true,"wgPopupsConflictsWithNavPopupGadget":false,"wgVisualEditor":{"pageLanguageCode":"en","pageLanguageDir":"ltr","pageVariantFallbacks":"en","usePageImages":true,"usePageDescriptions":true},"wgMFExpandAllSectionsUserOption":true,"wgMFEnableFontChanger":true,"wgMFDisplayWikibaseDescriptions":{"search":true,"nearby":true,"watchlist":true,"tagline":false},"wgRelatedArticles":null,"wgRelatedArticlesUseCirrusSearch":true,"wgRelatedArticlesOnlyUseCirrusSearch":false,"wgWMESchemaEditAttemptStepOversample":false,"wgPoweredByHHVM":true,"wgULSCurrentAutonym":"English","wgNoticeProject":"wikipedia","wgCentralNoticeCookiesToDelete":[],"wgCentralNoticeCategoriesUsingLegacy":["Fundraising","fundraising"],"wgWikibaseItemId":"Q4395506","wgScoreNoteLanguages":{"arabic":"العربية","catalan":"català","deutsch":"Deutsch","english":"English","espanol":"español","italiano":"italiano","nederlands":"Nederlands","norsk":"norsk","portugues":"português","suomi":"suomi","svenska":"svenska","vlaams":"West-Vlams"},"wgScoreDefaultNoteLanguage":"nederlands","wgCentralAuthMobileDomain":false,"wgCodeMirrorEnabled":true,"wgVisualEditorToolbarScrollOffset":0,"wgVisualEditorUnsupportedEditParams":["undo","undoafter","veswitched"],"wgEditSubmitButtonLabelPublish":true,"oresWikiId":"enwiki","oresBaseUrl":"http://ores.discovery.wmnet:8081/","oresApiVersion":3});mw.loader.state({"ext.gadget.charinsert-styles":"ready","ext.globalCssJs.user.styles":"ready","ext.globalCssJs.site.styles":"ready","site.styles":"ready","noscript":"ready","user.styles":"ready","ext.globalCssJs.user":"ready","ext.globalCssJs.site":"ready","user":"ready","user.options":"ready","user.tokens":"loading","mediawiki.legacy.shared":"ready","mediawiki.legacy.commonPrint":"ready","mediawiki.toc.styles":"ready","wikibase.client.init":"ready","ext.visualEditor.desktopArticleTarget.noscript":"ready","ext.uls.interlanguage":"ready","ext.wikimediaBadges":"ready","ext.3d.styles":"ready","mediawiki.skinning.interface":"ready","skins.vector.styles":"ready"});mw.loader.implement("user.tokens@0tffind",function($,jQuery,require,module){/*@nomin*/mw.user.tokens.set({"editToken":"+\\","patrolToken":"+\\","watchToken":"+\\","csrfToken":"+\\"});
 });RLPAGEMODULES=["site","mediawiki.page.startup","mediawiki.page.ready","mediawiki.toc","mediawiki.searchSuggest","ext.gadget.teahouse","ext.gadget.ReferenceTooltips","ext.gadget.watchlist-notice","ext.gadget.DRN-wizard","ext.gadget.charinsert","ext.gadget.refToolbar","ext.gadget.extra-toolbar-buttons","ext.gadget.switcher","ext.centralauth.centralautologin","mmv.head","mmv.bootstrap.autostart","ext.popups","ext.visualEditor.desktopArticleTarget.init","ext.visualEditor.targetLoader","ext.eventLogging","ext.wikimediaEvents","ext.navigationTiming","ext.uls.eventlogger","ext.uls.init","ext.uls.compactlinks","ext.uls.interface","ext.centralNotice.geoIP","ext.centralNotice.startUp","skins.vector.js"];mw.loader.load(RLPAGEMODULES);});
   </script>
   <link href="/w/load.php?debug=false&amp;lang=en&amp;modules=ext.3d.styles%7Cext.uls.interlanguage%7Cext.visualEditor.desktopArticleTarget.noscript%7Cext.wikimediaBadges%7Cmediawiki.legacy.commonPrint%2Cshared%7Cmediawiki.skinning.interface%7Cmediawiki.toc.styles%7Cskins.vector.styles%7Cwikibase.client.init&amp;only=styles&amp;skin=vector" rel="stylesheet"/>
@@ -953,8 +953,8 @@
             – probably what you are looking for: Arts, History, Technology, etc.
            </li>
            <li>
-            <a class="new" href="/w/index.php?title=Portal:Contents/Subcategories&amp;action=edit&amp;redlink=1" title="Portal:Contents/Subcategories (page does not exist)">
-             Portal:Contents/Subcategories
+            <a href="/wiki/Portal:Contents/Categories" title="Portal:Contents/Categories">
+             Portal:Contents/Categories
             </a>
             – a hand-crafted list of first- and second-level topic categories
            </li>
@@ -971,8 +971,8 @@
             Category:Contents
            </a>
            is technically at the top of the category hierarchy, but contains many categories useful to editors but not readers.
-           <a class="new" href="/wiki/Special:Subcategories" title="Special:Subcategories (page does not exist)">
-            Special:Subcategories
+           <a href="/wiki/Special:Categories" title="Special:Categories">
+            Special:Categories
            </a>
            lists every category alphabetically.
           </p>
@@ -1225,7 +1225,7 @@
           <ul>
            <li>
             <span style="font-size:90%">
-             <a href="/wiki/January_27" title="January 27">
+             <a href="/wiki/February_1" title="February 1">
               today
              </a>
             </span>
@@ -1305,12 +1305,12 @@
       </div>
       <!-- 
 NewPP limit report
-Parsed by mw1348
-Cached time: 20190127155821
+Parsed by mw1230
+Cached time: 20190201141859
 Cache expiry: 3600
 Dynamic content: true
-CPU time usage: 0.144 seconds
-Real time usage: 0.215 seconds
+CPU time usage: 0.132 seconds
+Real time usage: 0.203 seconds
 Preprocessor visited node count: 307/1000000
 Preprocessor generated node count: 0/1500000
 Post‐expand include size: 6531/2097152 bytes
@@ -1320,23 +1320,23 @@ Expensive parser function count: 4/500
 Unstrip recursion depth: 0/20
 Unstrip post‐expand size: 1257/5000000 bytes
 Number of Wikibase entities loaded: 0/400
-Lua time usage: 0.057/10.000 seconds
+Lua time usage: 0.051/10.000 seconds
 Lua memory usage: 1.42 MB/50 MB
 -->
       <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%  160.538      1 -total
- 25.84%   41.480      1 Template:Short_description
- 24.18%   38.822      1 Template:Pagetype
- 23.28%   37.366      1 Template:Pp-semi-indef
- 22.04%   35.380      1 Template:Shortcut
-  9.55%   15.335      1 Template:TOC_right
-  7.08%   11.369      1 Template:Main
-  3.69%    5.924      1 Portal:Contents/TOC_navbar
-  3.41%    5.475      1 Template:Pp-move-indef
-  2.26%    3.624      1 Template:Contents_pages_(footer_box)
+100.00%  152.399      1 -total
+ 25.82%   39.353      1 Template:Pp-semi-indef
+ 24.54%   37.397      1 Template:Short_description
+ 23.05%   35.134      1 Template:Pagetype
+ 18.46%   28.135      1 Template:Shortcut
+ 11.10%   16.913      1 Template:TOC_right
+  7.77%   11.838      1 Template:Main
+  3.74%    5.697      1 Template:Pp-move-indef
+  3.60%    5.484      1 Portal:Contents/TOC_navbar
+  2.13%    3.243      1 Template:Contents_pages_(footer_box)
 -->
-      <!-- Saved in parser cache with key enwiki:pcache:idhash:40273-0!canonical and timestamp 20190127155832 and revision id 880463058
+      <!-- Saved in parser cache with key enwiki:pcache:idhash:40273-0!canonical and timestamp 20190201141903 and revision id 881272802
  -->
      </div>
      <noscript>
@@ -1345,8 +1345,8 @@ Transclusion expansion time report (%,ms,calls,template)
     </div>
     <div class="printfooter">
      Retrieved from "
-     <a dir="ltr" href="https://en.wikipedia.org/w/index.php?title=Portal:Contents&amp;oldid=880463058">
-      https://en.wikipedia.org/w/index.php?title=Portal:Contents&amp;oldid=880463058
+     <a dir="ltr" href="https://en.wikipedia.org/w/index.php?title=Portal:Contents&amp;oldid=881272802">
+      https://en.wikipedia.org/w/index.php?title=Portal:Contents&amp;oldid=881272802
      </a>
      "
     </div>
@@ -1639,7 +1639,7 @@ You can view its source [e]">
         </a>
        </li>
        <li id="t-permalink">
-        <a href="/w/index.php?title=Portal:Contents&amp;oldid=880463058" title="Permanent link to this revision of the page">
+        <a href="/w/index.php?title=Portal:Contents&amp;oldid=881272802" title="Permanent link to this revision of the page">
          Permanent link
         </a>
        </li>
@@ -1920,7 +1920,7 @@ You can view its source [e]">
   <div id="footer" role="contentinfo">
    <ul id="footer-info">
     <li id="footer-info-lastmod">
-     This page was last edited on 27 January 2019, at 15:58
+     This page was last edited on 1 February 2019, at 14:19
      <span class="anonymous-show">
       (UTC)
      </span>
@@ -2002,7 +2002,7 @@ additional terms may apply.  By using this site, you agree to the
    </div>
   </div>
   <script>
-   (window.RLQ=window.RLQ||[]).push(function(){mw.config.set({"wgPageParseReport":{"limitreport":{"cputime":"0.144","walltime":"0.215","ppvisitednodes":{"value":307,"limit":1000000},"ppgeneratednodes":{"value":0,"limit":1500000},"postexpandincludesize":{"value":6531,"limit":2097152},"templateargumentsize":{"value":153,"limit":2097152},"expansiondepth":{"value":5,"limit":40},"expensivefunctioncount":{"value":4,"limit":500},"unstrip-depth":{"value":0,"limit":20},"unstrip-size":{"value":1257,"limit":5000000},"entityaccesscount":{"value":0,"limit":400},"timingprofile":["100.00%  160.538      1 -total"," 25.84%   41.480      1 Template:Short_description"," 24.18%   38.822      1 Template:Pagetype"," 23.28%   37.366      1 Template:Pp-semi-indef"," 22.04%   35.380      1 Template:Shortcut","  9.55%   15.335      1 Template:TOC_right","  7.08%   11.369      1 Template:Main","  3.69%    5.924      1 Portal:Contents/TOC_navbar","  3.41%    5.475      1 Template:Pp-move-indef","  2.26%    3.624      1 Template:Contents_pages_(footer_box)"]},"scribunto":{"limitreport-timeusage":{"value":"0.057","limit":"10.000"},"limitreport-memusage":{"value":1486708,"limit":52428800}},"cachereport":{"origin":"mw1348","timestamp":"20190127155821","ttl":3600,"transientcontent":true}}});mw.config.set({"wgBackendResponseTime":98,"wgHostname":"mw1321"});});
+   (window.RLQ=window.RLQ||[]).push(function(){mw.config.set({"wgPageParseReport":{"limitreport":{"cputime":"0.132","walltime":"0.203","ppvisitednodes":{"value":307,"limit":1000000},"ppgeneratednodes":{"value":0,"limit":1500000},"postexpandincludesize":{"value":6531,"limit":2097152},"templateargumentsize":{"value":153,"limit":2097152},"expansiondepth":{"value":5,"limit":40},"expensivefunctioncount":{"value":4,"limit":500},"unstrip-depth":{"value":0,"limit":20},"unstrip-size":{"value":1257,"limit":5000000},"entityaccesscount":{"value":0,"limit":400},"timingprofile":["100.00%  152.399      1 -total"," 25.82%   39.353      1 Template:Pp-semi-indef"," 24.54%   37.397      1 Template:Short_description"," 23.05%   35.134      1 Template:Pagetype"," 18.46%   28.135      1 Template:Shortcut"," 11.10%   16.913      1 Template:TOC_right","  7.77%   11.838      1 Template:Main","  3.74%    5.697      1 Template:Pp-move-indef","  3.60%    5.484      1 Portal:Contents/TOC_navbar","  2.13%    3.243      1 Template:Contents_pages_(footer_box)"]},"scribunto":{"limitreport-timeusage":{"value":"0.051","limit":"10.000"},"limitreport-memusage":{"value":1486708,"limit":52428800}},"cachereport":{"origin":"mw1230","timestamp":"20190201141859","ttl":3600,"transientcontent":true}}});mw.config.set({"wgBackendResponseTime":107,"wgHostname":"mw1272"});});
   </script>
  </body>
 </html>
