--- a/scrape-wiki/data/html/0044.html
+++ b/scrape-wiki/data/html/0044.html
@@ -9,7 +9,7 @@
    document.documentElement.className = document.documentElement.className.replace( /(^|\s)client-nojs(\s|$)/, "$1client-js$2" );
   </script>
   <script>
-   (window.RLQ=window.RLQ||[]).push(function(){mw.config.set({"wgCanonicalNamespace":"","wgCanonicalSpecialPageName":false,"wgNamespaceNumber":0,"wgPageName":"Joe_Gilmore","wgTitle":"Joe Gilmore","wgCurRevisionId":859418140,"wgRevisionId":859418140,"wgArticleId":7000913,"wgIsArticle":true,"wgIsRedirect":false,"wgAction":"view","wgUserName":null,"wgUserGroups":["*"],"wgCategories":["Articles with hRecipes","All articles with unsourced statements","Articles with unsourced statements from January 2012","Non-standard drinkware","1922 births","2015 deaths","Bartenders"],"wgBreakFrames":false,"wgPageContentLanguage":"en","wgPageContentModel":"wikitext","wgSeparatorTransformTable":["",""],"wgDigitTransformTable":["",""],"wgDefaultDateFormat":"dmy","wgMonthNames":["","January","February","March","April","May","June","July","August","September","October","November","December"],"wgMonthNamesShort":["","Jan","Feb","Mar","Apr","May","Jun","Jul","Aug","Sep","Oct","Nov","Dec"],"wgRelevantPageName":"Joe_Gilmore","wgRelevantArticleId":7000913,"wgRequestId":"XFGsoQpAMEkAABxXTioAAAAY","wgCSPNonce":false,"wgIsProbablyEditable":true,"wgRelevantPageIsProbablyEditable":true,"wgRestrictionEdit":[],"wgRestrictionMove":[],"wgRedirectedFrom":"The_Blenheim","wgFlaggedRevsParams":{"tags":{}},"wgStableRevisionId":null,"wgCategoryTreePageCategoryOptions":"{\"mode\":0,\"hideprefix\":20,\"showcount\":true,\"namespaces\":false}","wgWikiEditorEnabledModules":[],"wgBetaFeaturesFeatures":[],"wgMediaViewerOnClick":true,"wgMediaViewerEnabledByDefault":true,"wgPopupsShouldSendModuleToUser":true,"wgPopupsConflictsWithNavPopupGadget":false,"wgVisualEditor":{"pageLanguageCode":"en","pageLanguageDir":"ltr","pageVariantFallbacks":"en","usePageImages":true,"usePageDescriptions":true},"wgMFExpandAllSectionsUserOption":true,"wgMFEnableFontChanger":true,"wgMFDisplayWikibaseDescriptions":{"search":true,"nearby":true,"watchlist":true,"tagline":false},"wgRelatedArticles":null,"wgRelatedArticlesUseCirrusSearch":true,"wgRelatedArticlesOnlyUseCirrusSearch":false,"wgWMESchemaEditAttemptStepOversample":false,"wgPoweredByHHVM":true,"wgULSCurrentAutonym":"English","wgNoticeProject":"wikipedia","wgCentralNoticeCookiesToDelete":[],"wgCentralNoticeCategoriesUsingLegacy":["Fundraising","fundraising"],"wgInternalRedirectTargetUrl":"/wiki/Joe_Gilmore#The_Blenheim","wgWikibaseItemId":"Q6210041","wgScoreNoteLanguages":{"arabic":"العربية","catalan":"català","deutsch":"Deutsch","english":"English","espanol":"español","italiano":"italiano","nederlands":"Nederlands","norsk":"norsk","portugues":"português","suomi":"suomi","svenska":"svenska","vlaams":"West-Vlams"},"wgScoreDefaultNoteLanguage":"nederlands","wgCentralAuthMobileDomain":false,"wgCodeMirrorEnabled":true,"wgVisualEditorToolbarScrollOffset":0,"wgVisualEditorUnsupportedEditParams":["undo","undoafter","veswitched"],"wgEditSubmitButtonLabelPublish":true,"oresWikiId":"enwiki","oresBaseUrl":"http://ores.discovery.wmnet:8081/","oresApiVersion":3});mw.loader.state({"ext.gadget.charinsert-styles":"ready","ext.globalCssJs.user.styles":"ready","ext.globalCssJs.site.styles":"ready","site.styles":"ready","noscript":"ready","user.styles":"ready","ext.globalCssJs.user":"ready","ext.globalCssJs.site":"ready","user":"ready","user.options":"ready","user.tokens":"loading","ext.cite.styles":"ready","mediawiki.legacy.shared":"ready","mediawiki.legacy.commonPrint":"ready","mediawiki.toc.styles":"ready","wikibase.client.init":"ready","ext.visualEditor.desktopArticleTarget.noscript":"ready","ext.uls.interlanguage":"ready","ext.wikimediaBadges":"ready","ext.3d.styles":"ready","mediawiki.skinning.interface":"ready","skins.vector.styles":"ready"});mw.loader.implement("user.tokens@0tffind",function($,jQuery,require,module){/*@nomin*/mw.user.tokens.set({"editToken":"+\\","patrolToken":"+\\","watchToken":"+\\","csrfToken":"+\\"});
+   (window.RLQ=window.RLQ||[]).push(function(){mw.config.set({"wgCanonicalNamespace":"","wgCanonicalSpecialPageName":false,"wgNamespaceNumber":0,"wgPageName":"Joe_Gilmore","wgTitle":"Joe Gilmore","wgCurRevisionId":881271600,"wgRevisionId":881271600,"wgArticleId":7000913,"wgIsArticle":true,"wgIsRedirect":false,"wgAction":"view","wgUserName":null,"wgUserGroups":["*"],"wgCategories":["Articles with hRecipes","All articles with unsourced statements","Articles with unsourced statements from January 2012","Non-standard drinkware","1922 births","2015 deaths","Bartenders"],"wgBreakFrames":false,"wgPageContentLanguage":"en","wgPageContentModel":"wikitext","wgSeparatorTransformTable":["",""],"wgDigitTransformTable":["",""],"wgDefaultDateFormat":"dmy","wgMonthNames":["","January","February","March","April","May","June","July","August","September","October","November","December"],"wgMonthNamesShort":["","Jan","Feb","Mar","Apr","May","Jun","Jul","Aug","Sep","Oct","Nov","Dec"],"wgRelevantPageName":"Joe_Gilmore","wgRelevantArticleId":7000913,"wgRequestId":"XFTYBApAMF0AAKnE9@AAAAAK","wgCSPNonce":false,"wgIsProbablyEditable":true,"wgRelevantPageIsProbablyEditable":true,"wgRestrictionEdit":[],"wgRestrictionMove":[],"wgRedirectedFrom":"The_Blenheim","wgFlaggedRevsParams":{"tags":{}},"wgStableRevisionId":null,"wgCategoryTreePageCategoryOptions":"{\"mode\":0,\"hideprefix\":20,\"showcount\":true,\"namespaces\":false}","wgWikiEditorEnabledModules":[],"wgBetaFeaturesFeatures":[],"wgMediaViewerOnClick":true,"wgMediaViewerEnabledByDefault":true,"wgPopupsShouldSendModuleToUser":true,"wgPopupsConflictsWithNavPopupGadget":false,"wgVisualEditor":{"pageLanguageCode":"en","pageLanguageDir":"ltr","pageVariantFallbacks":"en","usePageImages":true,"usePageDescriptions":true},"wgMFExpandAllSectionsUserOption":true,"wgMFEnableFontChanger":true,"wgMFDisplayWikibaseDescriptions":{"search":true,"nearby":true,"watchlist":true,"tagline":false},"wgRelatedArticles":null,"wgRelatedArticlesUseCirrusSearch":true,"wgRelatedArticlesOnlyUseCirrusSearch":false,"wgWMESchemaEditAttemptStepOversample":false,"wgPoweredByHHVM":true,"wgULSCurrentAutonym":"English","wgNoticeProject":"wikipedia","wgCentralNoticeCookiesToDelete":[],"wgCentralNoticeCategoriesUsingLegacy":["Fundraising","fundraising"],"wgInternalRedirectTargetUrl":"/wiki/Joe_Gilmore#The_Blenheim","wgWikibaseItemId":"Q6210041","wgScoreNoteLanguages":{"arabic":"العربية","catalan":"català","deutsch":"Deutsch","english":"English","espanol":"español","italiano":"italiano","nederlands":"Nederlands","norsk":"norsk","portugues":"português","suomi":"suomi","svenska":"svenska","vlaams":"West-Vlams"},"wgScoreDefaultNoteLanguage":"nederlands","wgCentralAuthMobileDomain":false,"wgCodeMirrorEnabled":true,"wgVisualEditorToolbarScrollOffset":0,"wgVisualEditorUnsupportedEditParams":["undo","undoafter","veswitched"],"wgEditSubmitButtonLabelPublish":true,"oresWikiId":"enwiki","oresBaseUrl":"http://ores.discovery.wmnet:8081/","oresApiVersion":3});mw.loader.state({"ext.gadget.charinsert-styles":"ready","ext.globalCssJs.user.styles":"ready","ext.globalCssJs.site.styles":"ready","site.styles":"ready","noscript":"ready","user.styles":"ready","ext.globalCssJs.user":"ready","ext.globalCssJs.site":"ready","user":"ready","user.options":"ready","user.tokens":"loading","ext.cite.styles":"ready","mediawiki.legacy.shared":"ready","mediawiki.legacy.commonPrint":"ready","mediawiki.toc.styles":"ready","wikibase.client.init":"ready","ext.visualEditor.desktopArticleTarget.noscript":"ready","ext.uls.interlanguage":"ready","ext.wikimediaBadges":"ready","ext.3d.styles":"ready","mediawiki.skinning.interface":"ready","skins.vector.styles":"ready"});mw.loader.implement("user.tokens@0tffind",function($,jQuery,require,module){/*@nomin*/mw.user.tokens.set({"editToken":"+\\","patrolToken":"+\\","watchToken":"+\\","csrfToken":"+\\"});
 });RLPAGEMODULES=["mediawiki.action.view.redirect","ext.cite.ux-enhancements","ext.scribunto.logs","site","mediawiki.page.startup","mediawiki.page.ready","mediawiki.toc","mediawiki.searchSuggest","ext.gadget.teahouse","ext.gadget.ReferenceTooltips","ext.gadget.watchlist-notice","ext.gadget.DRN-wizard","ext.gadget.charinsert","ext.gadget.refToolbar","ext.gadget.extra-toolbar-buttons","ext.gadget.switcher","ext.centralauth.centralautologin","mmv.head","mmv.bootstrap.autostart","ext.popups","ext.visualEditor.desktopArticleTarget.init","ext.visualEditor.targetLoader","ext.eventLogging","ext.wikimediaEvents","ext.navigationTiming","ext.uls.eventlogger","ext.uls.init","ext.uls.compactlinks","ext.uls.interface","ext.quicksurveys.init","ext.centralNotice.geoIP","ext.centralNotice.startUp","skins.vector.js"];mw.loader.load(RLPAGEMODULES);});
   </script>
   <link href="/w/load.php?debug=false&amp;lang=en&amp;modules=ext.3d.styles%7Cext.cite.styles%7Cext.uls.interlanguage%7Cext.visualEditor.desktopArticleTarget.noscript%7Cext.wikimediaBadges%7Cmediawiki.legacy.commonPrint%2Cshared%7Cmediawiki.skinning.interface%7Cmediawiki.toc.styles%7Cskins.vector.styles%7Cwikibase.client.init&amp;only=styles&amp;skin=vector" rel="stylesheet"/>
@@ -2977,8 +2977,8 @@
       </table>
       <p>
        The
-       <a class="mw-redirect" href="/wiki/Corpse_reviver" title="Corpse reviver">
-        corpse revivers
+       <a href="/wiki/Corpse_Reviver" title="Corpse Reviver">
+        Corpse Revivers
        </a>
        are a series of
        <a href="/wiki/Hangover" title="Hangover">
@@ -4544,12 +4544,12 @@
       </div>
       <!-- 
 NewPP limit report
-Parsed by mw1274
-Cached time: 20190128154100
+Parsed by mw1339
+Cached time: 20190201140947
 Cache expiry: 2073600
 Dynamic content: false
-CPU time usage: 0.576 seconds
-Real time usage: 0.690 seconds
+CPU time usage: 0.580 seconds
+Real time usage: 0.668 seconds
 Preprocessor visited node count: 9113/1000000
 Preprocessor generated node count: 0/1500000
 Post‐expand include size: 118216/2097152 bytes
@@ -4559,23 +4559,23 @@ Expensive parser function count: 3/500
 Unstrip recursion depth: 1/20
 Unstrip post‐expand size: 17487/5000000 bytes
 Number of Wikibase entities loaded: 0/400
-Lua time usage: 0.272/10.000 seconds
+Lua time usage: 0.256/10.000 seconds
 Lua memory usage: 3.52 MB/50 MB
 -->
       <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%  539.830      1 -total
- 54.02%  291.616     20 Template:Infobox_cocktail
- 51.60%  278.529     20 Template:Infobox
- 22.19%  119.791      1 Template:Reflist
- 19.39%  104.692      5 Template:Cite_web
- 11.12%   60.032      1 Template:Citation_needed
-  9.89%   53.363      1 Template:Fix
-  6.83%   36.869      1 Template:Cocktails
-  6.73%   36.328      2 Template:Category_handler
-  6.18%   33.364      1 Template:Navbox
+100.00%  494.825      1 -total
+ 56.18%  277.973     20 Template:Infobox_cocktail
+ 53.28%  263.634     20 Template:Infobox
+ 19.62%   97.066      1 Template:Reflist
+ 17.24%   85.328      5 Template:Cite_web
+ 10.64%   52.667      1 Template:Citation_needed
+  9.42%   46.622      1 Template:Fix
+  7.56%   37.431      1 Template:Cocktails
+  6.86%   33.954      1 Template:Navbox
+  6.02%   29.774      2 Template:Category_handler
 -->
-      <!-- Saved in parser cache with key enwiki:pcache:idhash:7000913-0!canonical and timestamp 20190128154059 and revision id 859418140
+      <!-- Saved in parser cache with key enwiki:pcache:idhash:7000913-0!canonical and timestamp 20190201140956 and revision id 881271600
  -->
      </div>
      <noscript>
@@ -4584,8 +4584,8 @@ Transclusion expansion time report (%,ms,calls,template)
     </div>
     <div class="printfooter">
      Retrieved from "
-     <a dir="ltr" href="https://en.wikipedia.org/w/index.php?title=Joe_Gilmore&amp;oldid=859418140#The_Blenheim">
-      https://en.wikipedia.org/w/index.php?title=Joe_Gilmore&amp;oldid=859418140#The_Blenheim
+     <a dir="ltr" href="https://en.wikipedia.org/w/index.php?title=Joe_Gilmore&amp;oldid=881271600#The_Blenheim">
+      https://en.wikipedia.org/w/index.php?title=Joe_Gilmore&amp;oldid=881271600#The_Blenheim
      </a>
      "
     </div>
@@ -4877,7 +4877,7 @@ Transclusion expansion time report (%,ms,calls,template)
         </a>
        </li>
        <li id="t-permalink">
-        <a href="/w/index.php?title=Joe_Gilmore&amp;oldid=859418140" title="Permanent link to this revision of the page">
+        <a href="/w/index.php?title=Joe_Gilmore&amp;oldid=881271600" title="Permanent link to this revision of the page">
          Permanent link
         </a>
        </li>
@@ -4892,7 +4892,7 @@ Transclusion expansion time report (%,ms,calls,template)
         </a>
        </li>
        <li id="t-cite">
-        <a href="/w/index.php?title=Special:CiteThisPage&amp;page=Joe_Gilmore&amp;id=859418140" title="Information on how to cite this page">
+        <a href="/w/index.php?title=Special:CiteThisPage&amp;page=Joe_Gilmore&amp;id=881271600" title="Information on how to cite this page">
          Cite this page
         </a>
        </li>
@@ -4944,7 +4944,7 @@ Transclusion expansion time report (%,ms,calls,template)
   <div id="footer" role="contentinfo">
    <ul id="footer-info">
     <li id="footer-info-lastmod">
-     This page was last edited on 13 September 2018, at 22:43
+     This page was last edited on 1 February 2019, at 14:09
      <span class="anonymous-show">
       (UTC)
      </span>
@@ -5026,7 +5026,7 @@ additional terms may apply.  By using this site, you agree to the
    </div>
   </div>
   <script>
-   (window.RLQ=window.RLQ||[]).push(function(){mw.config.set({"wgPageParseReport":{"limitreport":{"cputime":"0.576","walltime":"0.690","ppvisitednodes":{"value":9113,"limit":1000000},"ppgeneratednodes":{"value":0,"limit":1500000},"postexpandincludesize":{"value":118216,"limit":2097152},"templateargumentsize":{"value":7932,"limit":2097152},"expansiondepth":{"value":11,"limit":40},"expensivefunctioncount":{"value":3,"limit":500},"unstrip-depth":{"value":1,"limit":20},"unstrip-size":{"value":17487,"limit":5000000},"entityaccesscount":{"value":0,"limit":400},"timingprofile":["100.00%  539.830      1 -total"," 54.02%  291.616     20 Template:Infobox_cocktail"," 51.60%  278.529     20 Template:Infobox"," 22.19%  119.791      1 Template:Reflist"," 19.39%  104.692      5 Template:Cite_web"," 11.12%   60.032      1 Template:Citation_needed","  9.89%   53.363      1 Template:Fix","  6.83%   36.869      1 Template:Cocktails","  6.73%   36.328      2 Template:Category_handler","  6.18%   33.364      1 Template:Navbox"]},"scribunto":{"limitreport-timeusage":{"value":"0.272","limit":"10.000"},"limitreport-memusage":{"value":3687125,"limit":52428800},"limitreport-logs":"table#1 {\n  [\"size\"] = \"tiny\",\n}\n"},"cachereport":{"origin":"mw1274","timestamp":"20190128154100","ttl":2073600,"transientcontent":false}}});mw.config.set({"wgBackendResponseTime":80,"wgHostname":"mw1238"});});
+   (window.RLQ=window.RLQ||[]).push(function(){mw.config.set({"wgPageParseReport":{"limitreport":{"cputime":"0.580","walltime":"0.668","ppvisitednodes":{"value":9113,"limit":1000000},"ppgeneratednodes":{"value":0,"limit":1500000},"postexpandincludesize":{"value":118216,"limit":2097152},"templateargumentsize":{"value":7932,"limit":2097152},"expansiondepth":{"value":11,"limit":40},"expensivefunctioncount":{"value":3,"limit":500},"unstrip-depth":{"value":1,"limit":20},"unstrip-size":{"value":17487,"limit":5000000},"entityaccesscount":{"value":0,"limit":400},"timingprofile":["100.00%  494.825      1 -total"," 56.18%  277.973     20 Template:Infobox_cocktail"," 53.28%  263.634     20 Template:Infobox"," 19.62%   97.066      1 Template:Reflist"," 17.24%   85.328      5 Template:Cite_web"," 10.64%   52.667      1 Template:Citation_needed","  9.42%   46.622      1 Template:Fix","  7.56%   37.431      1 Template:Cocktails","  6.86%   33.954      1 Template:Navbox","  6.02%   29.774      2 Template:Category_handler"]},"scribunto":{"limitreport-timeusage":{"value":"0.256","limit":"10.000"},"limitreport-memusage":{"value":3686755,"limit":52428800},"limitreport-logs":"table#1 {\n  [\"size\"] = \"tiny\",\n}\n"},"cachereport":{"origin":"mw1339","timestamp":"20190201140947","ttl":2073600,"transientcontent":false}}});mw.config.set({"wgBackendResponseTime":98,"wgHostname":"mw1258"});});
   </script>
  </body>
 </html>
