--- a/scrape-wiki/data/html/0369.html
+++ b/scrape-wiki/data/html/0369.html
@@ -9,7 +9,7 @@
    document.documentElement.className = document.documentElement.className.replace( /(^|\s)client-nojs(\s|$)/, "$1client-js$2" );
   </script>
   <script>
-   (window.RLQ=window.RLQ||[]).push(function(){mw.config.set({"wgCanonicalNamespace":"","wgCanonicalSpecialPageName":false,"wgNamespaceNumber":0,"wgPageName":"White_wine","wgTitle":"White wine","wgCurRevisionId":879279918,"wgRevisionId":879279918,"wgArticleId":927688,"wgIsArticle":true,"wgIsRedirect":false,"wgAction":"view","wgUserName":null,"wgUserGroups":["*"],"wgCategories":["Webarchive template archiveis links","Articles with French-language external links","Webarchive template wayback links","Articles with German-language external links","CS1 maint: Archived copy as title","CS1 French-language sources (fr)","Commons category link is on Wikidata","Wikipedia articles with GND identifiers","Wine styles"],"wgBreakFrames":false,"wgPageContentLanguage":"en","wgPageContentModel":"wikitext","wgSeparatorTransformTable":["",""],"wgDigitTransformTable":["",""],"wgDefaultDateFormat":"dmy","wgMonthNames":["","January","February","March","April","May","June","July","August","September","October","November","December"],"wgMonthNamesShort":["","Jan","Feb","Mar","Apr","May","Jun","Jul","Aug","Sep","Oct","Nov","Dec"],"wgRelevantPageName":"White_wine","wgRelevantArticleId":927688,"wgRequestId":"XFMjWgpAICIAAECZsswAAACF","wgCSPNonce":false,"wgIsProbablyEditable":true,"wgRelevantPageIsProbablyEditable":true,"wgRestrictionEdit":[],"wgRestrictionMove":[],"wgFlaggedRevsParams":{"tags":{}},"wgStableRevisionId":null,"wgCategoryTreePageCategoryOptions":"{\"mode\":0,\"hideprefix\":20,\"showcount\":true,\"namespaces\":false}","wgWikiEditorEnabledModules":[],"wgBetaFeaturesFeatures":[],"wgMediaViewerOnClick":true,"wgMediaViewerEnabledByDefault":true,"wgPopupsShouldSendModuleToUser":true,"wgPopupsConflictsWithNavPopupGadget":false,"wgVisualEditor":{"pageLanguageCode":"en","pageLanguageDir":"ltr","pageVariantFallbacks":"en","usePageImages":true,"usePageDescriptions":true},"wgMFExpandAllSectionsUserOption":true,"wgMFEnableFontChanger":true,"wgMFDisplayWikibaseDescriptions":{"search":true,"nearby":true,"watchlist":true,"tagline":false},"wgRelatedArticles":null,"wgRelatedArticlesUseCirrusSearch":true,"wgRelatedArticlesOnlyUseCirrusSearch":false,"wgWMESchemaEditAttemptStepOversample":false,"wgPoweredByHHVM":true,"wgULSCurrentAutonym":"English","wgNoticeProject":"wikipedia","wgCentralNoticeCookiesToDelete":[],"wgCentralNoticeCategoriesUsingLegacy":["Fundraising","fundraising"],"wgWikibaseItemId":"Q10210","wgScoreNoteLanguages":{"arabic":"العربية","catalan":"català","deutsch":"Deutsch","english":"English","espanol":"español","italiano":"italiano","nederlands":"Nederlands","norsk":"norsk","portugues":"português","suomi":"suomi","svenska":"svenska","vlaams":"West-Vlams"},"wgScoreDefaultNoteLanguage":"nederlands","wgCentralAuthMobileDomain":false,"wgCodeMirrorEnabled":true,"wgVisualEditorToolbarScrollOffset":0,"wgVisualEditorUnsupportedEditParams":["undo","undoafter","veswitched"],"wgEditSubmitButtonLabelPublish":true,"oresWikiId":"enwiki","oresBaseUrl":"http://ores.discovery.wmnet:8081/","oresApiVersion":3});mw.loader.state({"ext.gadget.charinsert-styles":"ready","ext.globalCssJs.user.styles":"ready","ext.globalCssJs.site.styles":"ready","site.styles":"ready","noscript":"ready","user.styles":"ready","ext.globalCssJs.user":"ready","ext.globalCssJs.site":"ready","user":"ready","user.options":"ready","user.tokens":"loading","ext.cite.styles":"ready","mediawiki.page.gallery.styles":"ready","mediawiki.legacy.shared":"ready","mediawiki.legacy.commonPrint":"ready","mediawiki.toc.styles":"ready","wikibase.client.init":"ready","ext.visualEditor.desktopArticleTarget.noscript":"ready","ext.uls.interlanguage":"ready","ext.wikimediaBadges":"ready","ext.3d.styles":"ready","mediawiki.skinning.interface":"ready","skins.vector.styles":"ready"});mw.loader.implement("user.tokens@0tffind",function($,jQuery,require,module){/*@nomin*/mw.user.tokens.set({"editToken":"+\\","patrolToken":"+\\","watchToken":"+\\","csrfToken":"+\\"});
+   (window.RLQ=window.RLQ||[]).push(function(){mw.config.set({"wgCanonicalNamespace":"","wgCanonicalSpecialPageName":false,"wgNamespaceNumber":0,"wgPageName":"White_wine","wgTitle":"White wine","wgCurRevisionId":881315885,"wgRevisionId":881315885,"wgArticleId":927688,"wgIsArticle":true,"wgIsRedirect":false,"wgAction":"view","wgUserName":null,"wgUserGroups":["*"],"wgCategories":["Webarchive template archiveis links","Articles with French-language external links","Webarchive template wayback links","Articles with German-language external links","CS1 maint: Archived copy as title","CS1 French-language sources (fr)","Commons category link is on Wikidata","Wikipedia articles with GND identifiers","Wine styles"],"wgBreakFrames":false,"wgPageContentLanguage":"en","wgPageContentModel":"wikitext","wgSeparatorTransformTable":["",""],"wgDigitTransformTable":["",""],"wgDefaultDateFormat":"dmy","wgMonthNames":["","January","February","March","April","May","June","July","August","September","October","November","December"],"wgMonthNamesShort":["","Jan","Feb","Mar","Apr","May","Jun","Jul","Aug","Sep","Oct","Nov","Dec"],"wgRelevantPageName":"White_wine","wgRelevantArticleId":927688,"wgRequestId":"XFSgEgpAICEAAKcqRWAAAABM","wgCSPNonce":false,"wgIsProbablyEditable":true,"wgRelevantPageIsProbablyEditable":true,"wgRestrictionEdit":[],"wgRestrictionMove":[],"wgFlaggedRevsParams":{"tags":{}},"wgStableRevisionId":null,"wgCategoryTreePageCategoryOptions":"{\"mode\":0,\"hideprefix\":20,\"showcount\":true,\"namespaces\":false}","wgWikiEditorEnabledModules":[],"wgBetaFeaturesFeatures":[],"wgMediaViewerOnClick":true,"wgMediaViewerEnabledByDefault":true,"wgPopupsShouldSendModuleToUser":true,"wgPopupsConflictsWithNavPopupGadget":false,"wgVisualEditor":{"pageLanguageCode":"en","pageLanguageDir":"ltr","pageVariantFallbacks":"en","usePageImages":true,"usePageDescriptions":true},"wgMFExpandAllSectionsUserOption":true,"wgMFEnableFontChanger":true,"wgMFDisplayWikibaseDescriptions":{"search":true,"nearby":true,"watchlist":true,"tagline":false},"wgRelatedArticles":null,"wgRelatedArticlesUseCirrusSearch":true,"wgRelatedArticlesOnlyUseCirrusSearch":false,"wgWMESchemaEditAttemptStepOversample":false,"wgPoweredByHHVM":true,"wgULSCurrentAutonym":"English","wgNoticeProject":"wikipedia","wgCentralNoticeCookiesToDelete":[],"wgCentralNoticeCategoriesUsingLegacy":["Fundraising","fundraising"],"wgWikibaseItemId":"Q10210","wgScoreNoteLanguages":{"arabic":"العربية","catalan":"català","deutsch":"Deutsch","english":"English","espanol":"español","italiano":"italiano","nederlands":"Nederlands","norsk":"norsk","portugues":"português","suomi":"suomi","svenska":"svenska","vlaams":"West-Vlams"},"wgScoreDefaultNoteLanguage":"nederlands","wgCentralAuthMobileDomain":false,"wgCodeMirrorEnabled":true,"wgVisualEditorToolbarScrollOffset":0,"wgVisualEditorUnsupportedEditParams":["undo","undoafter","veswitched"],"wgEditSubmitButtonLabelPublish":true,"oresWikiId":"enwiki","oresBaseUrl":"http://ores.discovery.wmnet:8081/","oresApiVersion":3});mw.loader.state({"ext.gadget.charinsert-styles":"ready","ext.globalCssJs.user.styles":"ready","ext.globalCssJs.site.styles":"ready","site.styles":"ready","noscript":"ready","user.styles":"ready","ext.globalCssJs.user":"ready","ext.globalCssJs.site":"ready","user":"ready","user.options":"ready","user.tokens":"loading","ext.cite.styles":"ready","mediawiki.page.gallery.styles":"ready","mediawiki.legacy.shared":"ready","mediawiki.legacy.commonPrint":"ready","mediawiki.toc.styles":"ready","wikibase.client.init":"ready","ext.visualEditor.desktopArticleTarget.noscript":"ready","ext.uls.interlanguage":"ready","ext.wikimediaBadges":"ready","ext.3d.styles":"ready","mediawiki.skinning.interface":"ready","skins.vector.styles":"ready"});mw.loader.implement("user.tokens@0tffind",function($,jQuery,require,module){/*@nomin*/mw.user.tokens.set({"editToken":"+\\","patrolToken":"+\\","watchToken":"+\\","csrfToken":"+\\"});
 });RLPAGEMODULES=["ext.cite.ux-enhancements","site","mediawiki.page.startup","mediawiki.page.ready","jquery.tablesorter","mediawiki.toc","mediawiki.searchSuggest","ext.gadget.teahouse","ext.gadget.ReferenceTooltips","ext.gadget.watchlist-notice","ext.gadget.DRN-wizard","ext.gadget.charinsert","ext.gadget.refToolbar","ext.gadget.extra-toolbar-buttons","ext.gadget.switcher","ext.centralauth.centralautologin","mmv.head","mmv.bootstrap.autostart","ext.popups","ext.visualEditor.desktopArticleTarget.init","ext.visualEditor.targetLoader","ext.eventLogging","ext.wikimediaEvents","ext.navigationTiming","ext.uls.eventlogger","ext.uls.init","ext.uls.compactlinks","ext.uls.interface","ext.quicksurveys.init","ext.centralNotice.geoIP","ext.centralNotice.startUp","skins.vector.js"];mw.loader.load(RLPAGEMODULES);});
   </script>
   <link href="/w/load.php?debug=false&amp;lang=en&amp;modules=ext.3d.styles%7Cext.cite.styles%7Cext.uls.interlanguage%7Cext.visualEditor.desktopArticleTarget.noscript%7Cext.wikimediaBadges%7Cmediawiki.legacy.commonPrint%2Cshared%7Cmediawiki.page.gallery.styles%7Cmediawiki.skinning.interface%7Cmediawiki.toc.styles%7Cskins.vector.styles%7Cwikibase.client.init&amp;only=styles&amp;skin=vector" rel="stylesheet"/>
@@ -8122,7 +8122,6 @@
          [105]
         </a>
        </sup>
-       This wine niche is now intended for export to Northern Europe, a region that consumes a high proportion of white wine.
       </p>
       <p>
        The
@@ -8145,7 +8144,7 @@
          [107]
         </a>
        </sup>
-       (Difficulty breathing). For others there is no real allergic reaction. Symptoms such as difficulty breathing, migraine, or stomach heat sensation may indicate an intolerance. A reaction caused by a deficiency of sulphite oxidase (the enzyme that breaks down
+       (Difficulty breathing). Symptoms such as difficulty breathing, migraine, or stomach heat sensation may indicate an intolerance. A reaction caused by a deficiency of sulphite oxidase (the enzyme that breaks down
        <a class="mw-redirect" href="/wiki/Sulphur_Dioxide" title="Sulphur Dioxide">
         Sulphur Dioxide
        </a>
@@ -8181,24 +8180,19 @@
          [111]
         </a>
        </sup>
-       However, studies in California have shown the beneficial effect of wine at a low daily dose for non-alcoholic cirrhosis
+       However, some studies in California may indicate beneficial effect of wine at a low daily dose for non-alcoholic cirrhosis.
        <sup class="reference" id="cite_ref-151">
         <a href="#cite_note-151">
          [112]
         </a>
        </sup>
-       and this effect was not seen with other alcoholic beverages such as
-       <a href="/wiki/Beer" title="Beer">
-        beer
-       </a>
-       or liquor, studies will be conducted in the 2010s to determine which components of the wine are responsible for this effect.
       </p>
       <p>
-       Although many wine drinkers are unsure of its health risks/benefits, consuming white wine does provide health benefits. In recent studies white wine was found to present more significant
+       In recent studies white wine was indicated to have some
        <a class="mw-redirect" href="/wiki/Cardiovascular" title="Cardiovascular">
         cardiovascular
        </a>
-       benefits than red wine.
+       benefits.
        <sup class="reference" id="cite_ref-152">
         <a href="#cite_note-152">
          [113]
@@ -13440,13 +13434,13 @@
       </div>
       <!-- 
 NewPP limit report
-Parsed by mw1332
-Cached time: 20190131163332
+Parsed by mw1299
+Cached time: 20190201193658
 Cache expiry: 2073600
 Dynamic content: false
-CPU time usage: 1.492 seconds
-Real time usage: 2.013 seconds
-Preprocessor visited node count: 12869/1000000
+CPU time usage: 1.432 seconds
+Real time usage: 1.836 seconds
+Preprocessor visited node count: 12868/1000000
 Preprocessor generated node count: 0/1500000
 Post‐expand include size: 141636/2097152 bytes
 Template argument size: 16799/2097152 bytes
@@ -13455,23 +13449,23 @@ Expensive parser function count: 2/500
 Unstrip recursion depth: 1/20
 Unstrip post‐expand size: 229251/5000000 bytes
 Number of Wikibase entities loaded: 2/400
-Lua time usage: 0.409/10.000 seconds
+Lua time usage: 0.363/10.000 seconds
 Lua memory usage: 17.48 MB/50 MB
 -->
       <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00% 1502.231      1 -total
- 40.02%  601.265      6 Template:Reflist
- 14.83%  222.718     25 Template:ISBN
- 13.59%  204.157     88 Template:Fr
- 13.34%  200.438      3 Template:Link_language
-  7.84%  117.753     27 Template:Catalog_lookup_link
-  6.90%  103.580     24 Template:Flag
-  5.11%   76.691      1 Template:Commons_category
-  4.54%   68.131      7 Template:Cite_web
-  3.06%   46.002      2 Template:Cite_journal
+100.00% 1355.202      1 -total
+ 41.32%  559.956      6 Template:Reflist
+ 14.71%  199.374     25 Template:ISBN
+ 11.23%  152.150     88 Template:Fr
+ 11.17%  151.351      3 Template:Link_language
+  7.55%  102.284     27 Template:Catalog_lookup_link
+  6.49%   87.951     24 Template:Flag
+  5.31%   71.912      1 Template:Commons_category
+  5.28%   71.524      7 Template:Cite_web
+  2.90%   39.239     27 Template:Error-small
 -->
-      <!-- Saved in parser cache with key enwiki:pcache:idhash:927688-0!canonical and timestamp 20190131163330 and revision id 879279918
+      <!-- Saved in parser cache with key enwiki:pcache:idhash:927688-0!canonical and timestamp 20190201193658 and revision id 881315885
  -->
      </div>
      <noscript>
@@ -13480,8 +13474,8 @@ Transclusion expansion time report (%,ms,calls,template)
     </div>
     <div class="printfooter">
      Retrieved from "
-     <a dir="ltr" href="https://en.wikipedia.org/w/index.php?title=White_wine&amp;oldid=879279918">
-      https://en.wikipedia.org/w/index.php?title=White_wine&amp;oldid=879279918
+     <a dir="ltr" href="https://en.wikipedia.org/w/index.php?title=White_wine&amp;oldid=881315885">
+      https://en.wikipedia.org/w/index.php?title=White_wine&amp;oldid=881315885
      </a>
      "
     </div>
@@ -13783,7 +13777,7 @@ Transclusion expansion time report (%,ms,calls,template)
         </a>
        </li>
        <li id="t-permalink">
-        <a href="/w/index.php?title=White_wine&amp;oldid=879279918" title="Permanent link to this revision of the page">
+        <a href="/w/index.php?title=White_wine&amp;oldid=881315885" title="Permanent link to this revision of the page">
          Permanent link
         </a>
        </li>
@@ -13798,7 +13792,7 @@ Transclusion expansion time report (%,ms,calls,template)
         </a>
        </li>
        <li id="t-cite">
-        <a href="/w/index.php?title=Special:CiteThisPage&amp;page=White_wine&amp;id=879279918" title="Information on how to cite this page">
+        <a href="/w/index.php?title=Special:CiteThisPage&amp;page=White_wine&amp;id=881315885" title="Information on how to cite this page">
          Cite this page
         </a>
        </li>
@@ -14044,7 +14038,7 @@ Transclusion expansion time report (%,ms,calls,template)
   <div id="footer" role="contentinfo">
    <ul id="footer-info">
     <li id="footer-info-lastmod">
-     This page was last edited on 20 January 2019, at 05:54
+     This page was last edited on 1 February 2019, at 19:36
      <span class="anonymous-show">
       (UTC)
      </span>
@@ -14126,7 +14120,7 @@ additional terms may apply.  By using this site, you agree to the
    </div>
   </div>
   <script>
-   (window.RLQ=window.RLQ||[]).push(function(){mw.config.set({"wgPageParseReport":{"limitreport":{"cputime":"1.492","walltime":"2.013","ppvisitednodes":{"value":12869,"limit":1000000},"ppgeneratednodes":{"value":0,"limit":1500000},"postexpandincludesize":{"value":141636,"limit":2097152},"templateargumentsize":{"value":16799,"limit":2097152},"expansiondepth":{"value":13,"limit":40},"expensivefunctioncount":{"value":2,"limit":500},"unstrip-depth":{"value":1,"limit":20},"unstrip-size":{"value":229251,"limit":5000000},"entityaccesscount":{"value":2,"limit":400},"timingprofile":["100.00% 1502.231      1 -total"," 40.02%  601.265      6 Template:Reflist"," 14.83%  222.718     25 Template:ISBN"," 13.59%  204.157     88 Template:Fr"," 13.34%  200.438      3 Template:Link_language","  7.84%  117.753     27 Template:Catalog_lookup_link","  6.90%  103.580     24 Template:Flag","  5.11%   76.691      1 Template:Commons_category","  4.54%   68.131      7 Template:Cite_web","  3.06%   46.002      2 Template:Cite_journal"]},"scribunto":{"limitreport-timeusage":{"value":"0.409","limit":"10.000"},"limitreport-memusage":{"value":18324397,"limit":52428800}},"cachereport":{"origin":"mw1332","timestamp":"20190131163332","ttl":2073600,"transientcontent":false}}});mw.config.set({"wgBackendResponseTime":2173,"wgHostname":"mw1332"});});
+   (window.RLQ=window.RLQ||[]).push(function(){mw.config.set({"wgPageParseReport":{"limitreport":{"cputime":"1.432","walltime":"1.836","ppvisitednodes":{"value":12868,"limit":1000000},"ppgeneratednodes":{"value":0,"limit":1500000},"postexpandincludesize":{"value":141636,"limit":2097152},"templateargumentsize":{"value":16799,"limit":2097152},"expansiondepth":{"value":13,"limit":40},"expensivefunctioncount":{"value":2,"limit":500},"unstrip-depth":{"value":1,"limit":20},"unstrip-size":{"value":229251,"limit":5000000},"entityaccesscount":{"value":2,"limit":400},"timingprofile":["100.00% 1355.202      1 -total"," 41.32%  559.956      6 Template:Reflist"," 14.71%  199.374     25 Template:ISBN"," 11.23%  152.150     88 Template:Fr"," 11.17%  151.351      3 Template:Link_language","  7.55%  102.284     27 Template:Catalog_lookup_link","  6.49%   87.951     24 Template:Flag","  5.31%   71.912      1 Template:Commons_category","  5.28%   71.524      7 Template:Cite_web","  2.90%   39.239     27 Template:Error-small"]},"scribunto":{"limitreport-timeusage":{"value":"0.363","limit":"10.000"},"limitreport-memusage":{"value":18324397,"limit":52428800}},"cachereport":{"origin":"mw1299","timestamp":"20190201193658","ttl":2073600,"transientcontent":false}}});mw.config.set({"wgBackendResponseTime":119,"wgHostname":"mw1331"});});
   </script>
  </body>
 </html>
