--- a/scrape-wiki/data/html/0429.html
+++ b/scrape-wiki/data/html/0429.html
@@ -9,7 +9,7 @@
    document.documentElement.className = document.documentElement.className.replace( /(^|\s)client-nojs(\s|$)/, "$1client-js$2" );
   </script>
   <script>
-   (window.RLQ=window.RLQ||[]).push(function(){mw.config.set({"wgCanonicalNamespace":"","wgCanonicalSpecialPageName":false,"wgNamespaceNumber":0,"wgPageName":"Baijiu","wgTitle":"Baijiu","wgCurRevisionId":877327193,"wgRevisionId":877327193,"wgArticleId":1279783,"wgIsArticle":true,"wgIsRedirect":false,"wgAction":"view","wgUserName":null,"wgUserGroups":["*"],"wgCategories":["CS1 maint: Archived copy as title","CS1 maint: Multiple names: authors list","CS1 maint: Explicit use of et al.","Webarchive template wayback links","Articles needing additional references from February 2013","All articles needing additional references","Articles with hRecipes","Articles with hProducts","Articles containing Chinese-language text","Articles containing simplified Chinese-language text","Commons category link from Wikidata","Baijiu","Chinese alcoholic drinks","Sorghum"],"wgBreakFrames":false,"wgPageContentLanguage":"en","wgPageContentModel":"wikitext","wgSeparatorTransformTable":["",""],"wgDigitTransformTable":["",""],"wgDefaultDateFormat":"dmy","wgMonthNames":["","January","February","March","April","May","June","July","August","September","October","November","December"],"wgMonthNamesShort":["","Jan","Feb","Mar","Apr","May","Jun","Jul","Aug","Sep","Oct","Nov","Dec"],"wgRelevantPageName":"Baijiu","wgRelevantArticleId":1279783,"wgRequestId":"XFMikgpAICkAAHgFEO8AAACU","wgCSPNonce":false,"wgIsProbablyEditable":true,"wgRelevantPageIsProbablyEditable":true,"wgRestrictionEdit":[],"wgRestrictionMove":[],"wgFlaggedRevsParams":{"tags":{}},"wgStableRevisionId":null,"wgCategoryTreePageCategoryOptions":"{\"mode\":0,\"hideprefix\":20,\"showcount\":true,\"namespaces\":false}","wgWikiEditorEnabledModules":[],"wgBetaFeaturesFeatures":[],"wgMediaViewerOnClick":true,"wgMediaViewerEnabledByDefault":true,"wgPopupsShouldSendModuleToUser":true,"wgPopupsConflictsWithNavPopupGadget":false,"wgVisualEditor":{"pageLanguageCode":"en","pageLanguageDir":"ltr","pageVariantFallbacks":"en","usePageImages":true,"usePageDescriptions":true},"wgMFExpandAllSectionsUserOption":true,"wgMFEnableFontChanger":true,"wgMFDisplayWikibaseDescriptions":{"search":true,"nearby":true,"watchlist":true,"tagline":false},"wgRelatedArticles":null,"wgRelatedArticlesUseCirrusSearch":true,"wgRelatedArticlesOnlyUseCirrusSearch":false,"wgWMESchemaEditAttemptStepOversample":false,"wgPoweredByHHVM":true,"wgULSCurrentAutonym":"English","wgNoticeProject":"wikipedia","wgCentralNoticeCookiesToDelete":[],"wgCentralNoticeCategoriesUsingLegacy":["Fundraising","fundraising"],"wgWikibaseItemId":"Q629266","wgScoreNoteLanguages":{"arabic":"العربية","catalan":"català","deutsch":"Deutsch","english":"English","espanol":"español","italiano":"italiano","nederlands":"Nederlands","norsk":"norsk","portugues":"português","suomi":"suomi","svenska":"svenska","vlaams":"West-Vlams"},"wgScoreDefaultNoteLanguage":"nederlands","wgCentralAuthMobileDomain":false,"wgCodeMirrorEnabled":true,"wgVisualEditorToolbarScrollOffset":0,"wgVisualEditorUnsupportedEditParams":["undo","undoafter","veswitched"],"wgEditSubmitButtonLabelPublish":true,"oresWikiId":"enwiki","oresBaseUrl":"http://ores.discovery.wmnet:8081/","oresApiVersion":3});mw.loader.state({"ext.gadget.charinsert-styles":"ready","ext.globalCssJs.user.styles":"ready","ext.globalCssJs.site.styles":"ready","site.styles":"ready","noscript":"ready","user.styles":"ready","ext.globalCssJs.user":"ready","ext.globalCssJs.site":"ready","user":"ready","user.options":"ready","user.tokens":"loading","ext.cite.styles":"ready","mediawiki.legacy.shared":"ready","mediawiki.legacy.commonPrint":"ready","mediawiki.toc.styles":"ready","wikibase.client.init":"ready","ext.visualEditor.desktopArticleTarget.noscript":"ready","ext.uls.interlanguage":"ready","ext.wikimediaBadges":"ready","ext.3d.styles":"ready","mediawiki.skinning.interface":"ready","skins.vector.styles":"ready"});mw.loader.implement("user.tokens@0tffind",function($,jQuery,require,module){/*@nomin*/mw.user.tokens.set({"editToken":"+\\","patrolToken":"+\\","watchToken":"+\\","csrfToken":"+\\"});
+   (window.RLQ=window.RLQ||[]).push(function(){mw.config.set({"wgCanonicalNamespace":"","wgCanonicalSpecialPageName":false,"wgNamespaceNumber":0,"wgPageName":"Baijiu","wgTitle":"Baijiu","wgCurRevisionId":881269935,"wgRevisionId":881269935,"wgArticleId":1279783,"wgIsArticle":true,"wgIsRedirect":false,"wgAction":"view","wgUserName":null,"wgUserGroups":["*"],"wgCategories":["CS1 maint: Archived copy as title","CS1 maint: Multiple names: authors list","CS1 maint: Explicit use of et al.","Webarchive template wayback links","Articles needing additional references from February 2013","All articles needing additional references","Articles with hRecipes","Articles with hProducts","Articles containing Chinese-language text","Articles containing simplified Chinese-language text","Commons category link from Wikidata","Baijiu","Chinese alcoholic drinks","Sorghum"],"wgBreakFrames":false,"wgPageContentLanguage":"en","wgPageContentModel":"wikitext","wgSeparatorTransformTable":["",""],"wgDigitTransformTable":["",""],"wgDefaultDateFormat":"dmy","wgMonthNames":["","January","February","March","April","May","June","July","August","September","October","November","December"],"wgMonthNamesShort":["","Jan","Feb","Mar","Apr","May","Jun","Jul","Aug","Sep","Oct","Nov","Dec"],"wgRelevantPageName":"Baijiu","wgRelevantArticleId":1279783,"wgRequestId":"XFRP3gpAMFgAAIVx1wgAAAAJ","wgCSPNonce":false,"wgIsProbablyEditable":true,"wgRelevantPageIsProbablyEditable":true,"wgRestrictionEdit":[],"wgRestrictionMove":[],"wgFlaggedRevsParams":{"tags":{}},"wgStableRevisionId":null,"wgCategoryTreePageCategoryOptions":"{\"mode\":0,\"hideprefix\":20,\"showcount\":true,\"namespaces\":false}","wgWikiEditorEnabledModules":[],"wgBetaFeaturesFeatures":[],"wgMediaViewerOnClick":true,"wgMediaViewerEnabledByDefault":true,"wgPopupsShouldSendModuleToUser":true,"wgPopupsConflictsWithNavPopupGadget":false,"wgVisualEditor":{"pageLanguageCode":"en","pageLanguageDir":"ltr","pageVariantFallbacks":"en","usePageImages":true,"usePageDescriptions":true},"wgMFExpandAllSectionsUserOption":true,"wgMFEnableFontChanger":true,"wgMFDisplayWikibaseDescriptions":{"search":true,"nearby":true,"watchlist":true,"tagline":false},"wgRelatedArticles":null,"wgRelatedArticlesUseCirrusSearch":true,"wgRelatedArticlesOnlyUseCirrusSearch":false,"wgWMESchemaEditAttemptStepOversample":false,"wgPoweredByHHVM":true,"wgULSCurrentAutonym":"English","wgNoticeProject":"wikipedia","wgCentralNoticeCookiesToDelete":[],"wgCentralNoticeCategoriesUsingLegacy":["Fundraising","fundraising"],"wgWikibaseItemId":"Q629266","wgScoreNoteLanguages":{"arabic":"العربية","catalan":"català","deutsch":"Deutsch","english":"English","espanol":"español","italiano":"italiano","nederlands":"Nederlands","norsk":"norsk","portugues":"português","suomi":"suomi","svenska":"svenska","vlaams":"West-Vlams"},"wgScoreDefaultNoteLanguage":"nederlands","wgCentralAuthMobileDomain":false,"wgCodeMirrorEnabled":true,"wgVisualEditorToolbarScrollOffset":0,"wgVisualEditorUnsupportedEditParams":["undo","undoafter","veswitched"],"wgEditSubmitButtonLabelPublish":true,"oresWikiId":"enwiki","oresBaseUrl":"http://ores.discovery.wmnet:8081/","oresApiVersion":3});mw.loader.state({"ext.gadget.charinsert-styles":"ready","ext.globalCssJs.user.styles":"ready","ext.globalCssJs.site.styles":"ready","site.styles":"ready","noscript":"ready","user.styles":"ready","ext.globalCssJs.user":"ready","ext.globalCssJs.site":"ready","user":"ready","user.options":"ready","user.tokens":"loading","ext.cite.styles":"ready","mediawiki.legacy.shared":"ready","mediawiki.legacy.commonPrint":"ready","mediawiki.toc.styles":"ready","wikibase.client.init":"ready","ext.visualEditor.desktopArticleTarget.noscript":"ready","ext.uls.interlanguage":"ready","ext.wikimediaBadges":"ready","ext.3d.styles":"ready","mediawiki.skinning.interface":"ready","skins.vector.styles":"ready"});mw.loader.implement("user.tokens@0tffind",function($,jQuery,require,module){/*@nomin*/mw.user.tokens.set({"editToken":"+\\","patrolToken":"+\\","watchToken":"+\\","csrfToken":"+\\"});
 });RLPAGEMODULES=["ext.cite.ux-enhancements","site","mediawiki.page.startup","mediawiki.page.ready","mediawiki.toc","mediawiki.searchSuggest","ext.gadget.teahouse","ext.gadget.ReferenceTooltips","ext.gadget.watchlist-notice","ext.gadget.DRN-wizard","ext.gadget.charinsert","ext.gadget.refToolbar","ext.gadget.extra-toolbar-buttons","ext.gadget.switcher","ext.centralauth.centralautologin","mmv.head","mmv.bootstrap.autostart","ext.popups","ext.visualEditor.desktopArticleTarget.init","ext.visualEditor.targetLoader","ext.eventLogging","ext.wikimediaEvents","ext.navigationTiming","ext.uls.eventlogger","ext.uls.init","ext.uls.compactlinks","ext.uls.interface","ext.quicksurveys.init","ext.centralNotice.geoIP","ext.centralNotice.startUp","skins.vector.js"];mw.loader.load(RLPAGEMODULES);});
   </script>
   <link href="/w/load.php?debug=false&amp;lang=en&amp;modules=ext.3d.styles%7Cext.cite.styles%7Cext.uls.interlanguage%7Cext.visualEditor.desktopArticleTarget.noscript%7Cext.wikimediaBadges%7Cmediawiki.legacy.commonPrint%2Cshared%7Cmediawiki.skinning.interface%7Cmediawiki.toc.styles%7Cskins.vector.styles%7Cwikibase.client.init&amp;only=styles&amp;skin=vector" rel="stylesheet"/>
@@ -164,7 +164,7 @@
        </tbody>
       </table>
       <div class="hatnote navigation-not-searchable" role="note">
-       "白酒" redirects here. It is not to be confused with
+       "Shaojiu" redirects here. For other uses, see
        <a class="mw-redirect mw-disambig" href="/wiki/%E7%87%92%E9%85%92_(disambiguation)" title="燒酒 (disambiguation)">
         燒酒
        </a>
@@ -582,7 +582,7 @@
          báijiǔ
         </span>
        </i>
-       ), also known as
+       ; literally: "white (clear) liquor"), also known as
        <i>
         <b>
          shaojiu
@@ -4722,38 +4722,38 @@
       </div>
       <!-- 
 NewPP limit report
-Parsed by mw1320
-Cached time: 20190131163001
+Parsed by mw1290
+Cached time: 20190201135457
 Cache expiry: 2073600
 Dynamic content: false
-CPU time usage: 0.780 seconds
-Real time usage: 1.106 seconds
-Preprocessor visited node count: 4117/1000000
+CPU time usage: 0.800 seconds
+Real time usage: 1.053 seconds
+Preprocessor visited node count: 4121/1000000
 Preprocessor generated node count: 0/1500000
-Post‐expand include size: 118347/2097152 bytes
+Post‐expand include size: 118407/2097152 bytes
 Template argument size: 916/2097152 bytes
 Highest expansion depth: 15/40
 Expensive parser function count: 5/500
 Unstrip recursion depth: 1/20
 Unstrip post‐expand size: 51148/5000000 bytes
 Number of Wikibase entities loaded: 1/400
-Lua time usage: 0.441/10.000 seconds
-Lua memory usage: 17.34 MB/50 MB
+Lua time usage: 0.462/10.000 seconds
+Lua memory usage: 17.53 MB/50 MB
 -->
       <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%  926.680      1 -total
- 37.12%  343.976      2 Template:Infobox
- 34.20%  316.900      1 Template:Infobox_Chinese
- 20.84%  193.139      1 Template:Reflist
- 11.90%  110.248      1 Template:Commons_category
- 10.84%  100.472      8 Template:Cite_web
- 10.75%   99.600      1 Template:More_citations_needed
- 10.42%   96.537      1 Template:Commons
- 10.13%   93.904      1 Template:Sister_project
-  9.83%   91.096      1 Template:Side_box
+100.00%  885.303      1 -total
+ 35.38%  313.218      2 Template:Infobox
+ 31.99%  283.233      1 Template:Infobox_Chinese
+ 23.58%  208.727      1 Template:Reflist
+ 13.69%  121.230      8 Template:Cite_web
+ 11.24%   99.506      1 Template:Commons_category
+ 11.05%   97.813      1 Template:More_citations_needed
+  9.67%   85.595      1 Template:Commons
+  9.36%   82.905      1 Template:Sister_project
+  9.02%   79.887      1 Template:Side_box
 -->
-      <!-- Saved in parser cache with key enwiki:pcache:idhash:1279783-0!canonical and timestamp 20190131162959 and revision id 877327193
+      <!-- Saved in parser cache with key enwiki:pcache:idhash:1279783-0!canonical and timestamp 20190201135457 and revision id 881269935
  -->
      </div>
      <noscript>
@@ -4762,8 +4762,8 @@ Transclusion expansion time report (%,ms,calls,template)
     </div>
     <div class="printfooter">
      Retrieved from "
-     <a dir="ltr" href="https://en.wikipedia.org/w/index.php?title=Baijiu&amp;oldid=877327193">
-      https://en.wikipedia.org/w/index.php?title=Baijiu&amp;oldid=877327193
+     <a dir="ltr" href="https://en.wikipedia.org/w/index.php?title=Baijiu&amp;oldid=881269935">
+      https://en.wikipedia.org/w/index.php?title=Baijiu&amp;oldid=881269935
      </a>
      "
     </div>
@@ -5090,7 +5090,7 @@ Transclusion expansion time report (%,ms,calls,template)
         </a>
        </li>
        <li id="t-permalink">
-        <a href="/w/index.php?title=Baijiu&amp;oldid=877327193" title="Permanent link to this revision of the page">
+        <a href="/w/index.php?title=Baijiu&amp;oldid=881269935" title="Permanent link to this revision of the page">
          Permanent link
         </a>
        </li>
@@ -5105,7 +5105,7 @@ Transclusion expansion time report (%,ms,calls,template)
         </a>
        </li>
        <li id="t-cite">
-        <a href="/w/index.php?title=Special:CiteThisPage&amp;page=Baijiu&amp;id=877327193" title="Information on how to cite this page">
+        <a href="/w/index.php?title=Special:CiteThisPage&amp;page=Baijiu&amp;id=881269935" title="Information on how to cite this page">
          Cite this page
         </a>
        </li>
@@ -5276,7 +5276,7 @@ Transclusion expansion time report (%,ms,calls,template)
   <div id="footer" role="contentinfo">
    <ul id="footer-info">
     <li id="footer-info-lastmod">
-     This page was last edited on 8 January 2019, at 00:16
+     This page was last edited on 1 February 2019, at 13:54
      <span class="anonymous-show">
       (UTC)
      </span>
@@ -5358,7 +5358,7 @@ additional terms may apply.  By using this site, you agree to the
    </div>
   </div>
   <script>
-   (window.RLQ=window.RLQ||[]).push(function(){mw.config.set({"wgPageParseReport":{"limitreport":{"cputime":"0.780","walltime":"1.106","ppvisitednodes":{"value":4117,"limit":1000000},"ppgeneratednodes":{"value":0,"limit":1500000},"postexpandincludesize":{"value":118347,"limit":2097152},"templateargumentsize":{"value":916,"limit":2097152},"expansiondepth":{"value":15,"limit":40},"expensivefunctioncount":{"value":5,"limit":500},"unstrip-depth":{"value":1,"limit":20},"unstrip-size":{"value":51148,"limit":5000000},"entityaccesscount":{"value":1,"limit":400},"timingprofile":["100.00%  926.680      1 -total"," 37.12%  343.976      2 Template:Infobox"," 34.20%  316.900      1 Template:Infobox_Chinese"," 20.84%  193.139      1 Template:Reflist"," 11.90%  110.248      1 Template:Commons_category"," 10.84%  100.472      8 Template:Cite_web"," 10.75%   99.600      1 Template:More_citations_needed"," 10.42%   96.537      1 Template:Commons"," 10.13%   93.904      1 Template:Sister_project","  9.83%   91.096      1 Template:Side_box"]},"scribunto":{"limitreport-timeusage":{"value":"0.441","limit":"10.000"},"limitreport-memusage":{"value":18181165,"limit":52428800}},"cachereport":{"origin":"mw1320","timestamp":"20190131163001","ttl":2073600,"transientcontent":false}}});mw.config.set({"wgBackendResponseTime":93,"wgHostname":"mw1320"});});
+   (window.RLQ=window.RLQ||[]).push(function(){mw.config.set({"wgPageParseReport":{"limitreport":{"cputime":"0.800","walltime":"1.053","ppvisitednodes":{"value":4121,"limit":1000000},"ppgeneratednodes":{"value":0,"limit":1500000},"postexpandincludesize":{"value":118407,"limit":2097152},"templateargumentsize":{"value":916,"limit":2097152},"expansiondepth":{"value":15,"limit":40},"expensivefunctioncount":{"value":5,"limit":500},"unstrip-depth":{"value":1,"limit":20},"unstrip-size":{"value":51148,"limit":5000000},"entityaccesscount":{"value":1,"limit":400},"timingprofile":["100.00%  885.303      1 -total"," 35.38%  313.218      2 Template:Infobox"," 31.99%  283.233      1 Template:Infobox_Chinese"," 23.58%  208.727      1 Template:Reflist"," 13.69%  121.230      8 Template:Cite_web"," 11.24%   99.506      1 Template:Commons_category"," 11.05%   97.813      1 Template:More_citations_needed","  9.67%   85.595      1 Template:Commons","  9.36%   82.905      1 Template:Sister_project","  9.02%   79.887      1 Template:Side_box"]},"scribunto":{"limitreport-timeusage":{"value":"0.462","limit":"10.000"},"limitreport-memusage":{"value":18378004,"limit":52428800}},"cachereport":{"origin":"mw1290","timestamp":"20190201135457","ttl":2073600,"transientcontent":false}}});mw.config.set({"wgBackendResponseTime":93,"wgHostname":"mw1253"});});
   </script>
  </body>
 </html>
