--- a/scrape-wiki/data/html/0542.html
+++ b/scrape-wiki/data/html/0542.html
@@ -9,7 +9,7 @@
    document.documentElement.className = document.documentElement.className.replace( /(^|\s)client-nojs(\s|$)/, "$1client-js$2" );
   </script>
   <script>
-   (window.RLQ=window.RLQ||[]).push(function(){mw.config.set({"wgCanonicalNamespace":"Project","wgCanonicalSpecialPageName":false,"wgNamespaceNumber":4,"wgPageName":"Wikipedia:About","wgTitle":"About","wgCurRevisionId":875800275,"wgRevisionId":875800275,"wgArticleId":63948,"wgIsArticle":true,"wgIsRedirect":false,"wgAction":"view","wgUserName":null,"wgUserGroups":["*"],"wgCategories":["Wikipedia semi-protected project pages","Pages including recorded pronunciations (English)","Wikipedia basic information"],"wgBreakFrames":false,"wgPageContentLanguage":"en","wgPageContentModel":"wikitext","wgSeparatorTransformTable":["",""],"wgDigitTransformTable":["",""],"wgDefaultDateFormat":"dmy","wgMonthNames":["","January","February","March","April","May","June","July","August","September","October","November","December"],"wgMonthNamesShort":["","Jan","Feb","Mar","Apr","May","Jun","Jul","Aug","Sep","Oct","Nov","Dec"],"wgRelevantPageName":"Wikipedia:About","wgRelevantArticleId":63948,"wgRequestId":"XFOajApAMFgAAJbGdI0AAAAM","wgCSPNonce":false,"wgIsProbablyEditable":false,"wgRelevantPageIsProbablyEditable":false,"wgRestrictionEdit":["autoconfirmed"],"wgRestrictionMove":["sysop"],"wgFlaggedRevsParams":{"tags":{}},"wgStableRevisionId":null,"wgCategoryTreePageCategoryOptions":"{\"mode\":0,\"hideprefix\":20,\"showcount\":true,\"namespaces\":false}","wgWikiEditorEnabledModules":[],"wgBetaFeaturesFeatures":[],"wgMediaViewerOnClick":true,"wgMediaViewerEnabledByDefault":true,"wgPopupsShouldSendModuleToUser":true,"wgPopupsConflictsWithNavPopupGadget":false,"wgVisualEditor":{"pageLanguageCode":"en","pageLanguageDir":"ltr","pageVariantFallbacks":"en","usePageImages":true,"usePageDescriptions":true},"wgMFExpandAllSectionsUserOption":true,"wgMFEnableFontChanger":true,"wgMFDisplayWikibaseDescriptions":{"search":true,"nearby":true,"watchlist":true,"tagline":false},"wgRelatedArticles":null,"wgRelatedArticlesUseCirrusSearch":true,"wgRelatedArticlesOnlyUseCirrusSearch":false,"wgWMESchemaEditAttemptStepOversample":false,"wgPoweredByHHVM":true,"wgULSCurrentAutonym":"English","wgNoticeProject":"wikipedia","wgCentralNoticeCookiesToDelete":[],"wgCentralNoticeCategoriesUsingLegacy":["Fundraising","fundraising"],"wgWikibaseItemId":"Q4387616","wgScoreNoteLanguages":{"arabic":"العربية","catalan":"català","deutsch":"Deutsch","english":"English","espanol":"español","italiano":"italiano","nederlands":"Nederlands","norsk":"norsk","portugues":"português","suomi":"suomi","svenska":"svenska","vlaams":"West-Vlams"},"wgScoreDefaultNoteLanguage":"nederlands","wgCentralAuthMobileDomain":false,"wgCodeMirrorEnabled":true,"wgVisualEditorToolbarScrollOffset":0,"wgVisualEditorUnsupportedEditParams":["undo","undoafter","veswitched"],"wgEditSubmitButtonLabelPublish":true,"oresWikiId":"enwiki","oresBaseUrl":"http://ores.discovery.wmnet:8081/","oresApiVersion":3});mw.loader.state({"ext.gadget.charinsert-styles":"ready","ext.globalCssJs.user.styles":"ready","ext.globalCssJs.site.styles":"ready","site.styles":"ready","noscript":"ready","user.styles":"ready","ext.globalCssJs.user":"ready","ext.globalCssJs.site":"ready","user":"ready","user.options":"ready","user.tokens":"loading","ext.cite.styles":"ready","ext.tmh.thumbnail.styles":"ready","mediawiki.legacy.shared":"ready","mediawiki.legacy.commonPrint":"ready","mediawiki.toc.styles":"ready","wikibase.client.init":"ready","ext.visualEditor.desktopArticleTarget.noscript":"ready","ext.uls.interlanguage":"ready","ext.wikimediaBadges":"ready","ext.3d.styles":"ready","mediawiki.skinning.interface":"ready","skins.vector.styles":"ready"});mw.loader.implement("user.tokens@0tffind",function($,jQuery,require,module){/*@nomin*/mw.user.tokens.set({"editToken":"+\\","patrolToken":"+\\","watchToken":"+\\","csrfToken":"+\\"});
+   (window.RLQ=window.RLQ||[]).push(function(){mw.config.set({"wgCanonicalNamespace":"Project","wgCanonicalSpecialPageName":false,"wgNamespaceNumber":4,"wgPageName":"Wikipedia:About","wgTitle":"About","wgCurRevisionId":875800275,"wgRevisionId":875800275,"wgArticleId":63948,"wgIsArticle":true,"wgIsRedirect":false,"wgAction":"view","wgUserName":null,"wgUserGroups":["*"],"wgCategories":["Wikipedia semi-protected project pages","Pages including recorded pronunciations (English)","Wikipedia basic information"],"wgBreakFrames":false,"wgPageContentLanguage":"en","wgPageContentModel":"wikitext","wgSeparatorTransformTable":["",""],"wgDigitTransformTable":["",""],"wgDefaultDateFormat":"dmy","wgMonthNames":["","January","February","March","April","May","June","July","August","September","October","November","December"],"wgMonthNamesShort":["","Jan","Feb","Mar","Apr","May","Jun","Jul","Aug","Sep","Oct","Nov","Dec"],"wgRelevantPageName":"Wikipedia:About","wgRelevantArticleId":63948,"wgRequestId":"XFR6BwpAICAAAB0i@EMAAAAN","wgCSPNonce":false,"wgIsProbablyEditable":false,"wgRelevantPageIsProbablyEditable":false,"wgRestrictionEdit":["autoconfirmed"],"wgRestrictionMove":["sysop"],"wgFlaggedRevsParams":{"tags":{}},"wgStableRevisionId":null,"wgCategoryTreePageCategoryOptions":"{\"mode\":0,\"hideprefix\":20,\"showcount\":true,\"namespaces\":false}","wgWikiEditorEnabledModules":[],"wgBetaFeaturesFeatures":[],"wgMediaViewerOnClick":true,"wgMediaViewerEnabledByDefault":true,"wgPopupsShouldSendModuleToUser":true,"wgPopupsConflictsWithNavPopupGadget":false,"wgVisualEditor":{"pageLanguageCode":"en","pageLanguageDir":"ltr","pageVariantFallbacks":"en","usePageImages":true,"usePageDescriptions":true},"wgMFExpandAllSectionsUserOption":true,"wgMFEnableFontChanger":true,"wgMFDisplayWikibaseDescriptions":{"search":true,"nearby":true,"watchlist":true,"tagline":false},"wgRelatedArticles":null,"wgRelatedArticlesUseCirrusSearch":true,"wgRelatedArticlesOnlyUseCirrusSearch":false,"wgWMESchemaEditAttemptStepOversample":false,"wgPoweredByHHVM":true,"wgULSCurrentAutonym":"English","wgNoticeProject":"wikipedia","wgCentralNoticeCookiesToDelete":[],"wgCentralNoticeCategoriesUsingLegacy":["Fundraising","fundraising"],"wgWikibaseItemId":"Q4387616","wgScoreNoteLanguages":{"arabic":"العربية","catalan":"català","deutsch":"Deutsch","english":"English","espanol":"español","italiano":"italiano","nederlands":"Nederlands","norsk":"norsk","portugues":"português","suomi":"suomi","svenska":"svenska","vlaams":"West-Vlams"},"wgScoreDefaultNoteLanguage":"nederlands","wgCentralAuthMobileDomain":false,"wgCodeMirrorEnabled":true,"wgVisualEditorToolbarScrollOffset":0,"wgVisualEditorUnsupportedEditParams":["undo","undoafter","veswitched"],"wgEditSubmitButtonLabelPublish":true,"oresWikiId":"enwiki","oresBaseUrl":"http://ores.discovery.wmnet:8081/","oresApiVersion":3});mw.loader.state({"ext.gadget.charinsert-styles":"ready","ext.globalCssJs.user.styles":"ready","ext.globalCssJs.site.styles":"ready","site.styles":"ready","noscript":"ready","user.styles":"ready","ext.globalCssJs.user":"ready","ext.globalCssJs.site":"ready","user":"ready","user.options":"ready","user.tokens":"loading","ext.cite.styles":"ready","ext.tmh.thumbnail.styles":"ready","mediawiki.legacy.shared":"ready","mediawiki.legacy.commonPrint":"ready","mediawiki.toc.styles":"ready","wikibase.client.init":"ready","ext.visualEditor.desktopArticleTarget.noscript":"ready","ext.uls.interlanguage":"ready","ext.wikimediaBadges":"ready","ext.3d.styles":"ready","mediawiki.skinning.interface":"ready","skins.vector.styles":"ready"});mw.loader.implement("user.tokens@0tffind",function($,jQuery,require,module){/*@nomin*/mw.user.tokens.set({"editToken":"+\\","patrolToken":"+\\","watchToken":"+\\","csrfToken":"+\\"});
 });RLPAGEMODULES=["ext.cite.ux-enhancements","mw.MediaWikiPlayer.loader","mw.PopUpMediaTransform","mw.TMHGalleryHook.js","site","mediawiki.page.startup","mediawiki.page.ready","mediawiki.toc","mediawiki.searchSuggest","ext.gadget.teahouse","ext.gadget.ReferenceTooltips","ext.gadget.watchlist-notice","ext.gadget.DRN-wizard","ext.gadget.charinsert","ext.gadget.refToolbar","ext.gadget.extra-toolbar-buttons","ext.gadget.switcher","ext.centralauth.centralautologin","mmv.head","mmv.bootstrap.autostart","ext.popups","ext.visualEditor.desktopArticleTarget.init","ext.visualEditor.targetLoader","ext.eventLogging","ext.wikimediaEvents","ext.navigationTiming","ext.uls.eventlogger","ext.uls.init","ext.uls.compactlinks","ext.uls.interface","ext.centralNotice.geoIP","ext.centralNotice.startUp","skins.vector.js"];mw.loader.load(RLPAGEMODULES);});
   </script>
   <link href="/w/load.php?debug=false&amp;lang=en&amp;modules=ext.3d.styles%7Cext.cite.styles%7Cext.tmh.thumbnail.styles%7Cext.uls.interlanguage%7Cext.visualEditor.desktopArticleTarget.noscript%7Cext.wikimediaBadges%7Cmediawiki.legacy.commonPrint%2Cshared%7Cmediawiki.skinning.interface%7Cmediawiki.toc.styles%7Cskins.vector.styles%7Cwikibase.client.init&amp;only=styles&amp;skin=vector" rel="stylesheet"/>
@@ -264,18 +264,18 @@
             version 1.33.0-wmf.14 (a6319bc).
            </li>
            <li>
-            It has 5,793,220 content articles,
+            It has 5,799,583 content articles,
             <br/>
-            and 46,993,774 pages in total.
+            and 46,998,479 pages in total.
            </li>
            <li>
-            There are 880,659 uploaded files.
+            There are 880,694 uploaded files.
            </li>
            <li>
-            There have been 876,503,719 edits.
+            There have been 876,579,458 edits.
            </li>
            <li>
-            There are 35,559,651
+            There are 35,565,000
             <a href="/wiki/Registered_user" title="Registered user">
              registered users
             </a>
@@ -291,7 +291,7 @@
             </ul>
            </li>
            <li>
-            Of these are 137,023 active users
+            Of these are 137,863 active users
             <br/>
             <small>
              (have performed an action in the last 30 days).
@@ -305,7 +305,7 @@
           <ul>
            <li>
             <small>
-             Information as of 01:01, 1 February 2019 (UTC).
+             Information as of 16:55, 1 February 2019 (UTC).
             </small>
            </li>
            <li>
@@ -625,7 +625,7 @@ The fundamental principles by which Wikipedia operates are the
        <a href="/wiki/Special:SiteMatrix" title="Special:SiteMatrix">
         302 languages
        </a>
-       . As of today, there are 5,793,220 articles in
+       . As of today, there are 5,799,583 articles in
        <a href="/wiki/English_language" title="English language">
         English
        </a>
@@ -1096,7 +1096,7 @@ The fundamental principles by which Wikipedia operates are the
          <a href="/wiki/English_Wikipedia" title="English Wikipedia">
           English edition of Wikipedia
          </a>
-         has grown to 5,793,220 articles, equivalent to
+         has grown to 5,799,583 articles, equivalent to
          <a href="/wiki/Wikipedia:Size_in_volumes" title="Wikipedia:Size in volumes">
           over 2,000 print volumes
          </a>
@@ -3669,7 +3669,7 @@ The fundamental principles by which Wikipedia operates are the
         </span>
         , it currently contains
         <a href="/wiki/Special:Statistics" title="Special:Statistics">
-         5,793,220
+         5,799,583
         </a>
         articles. 
 Many other Wikipedias are available; some of the largest are listed below.
@@ -8397,12 +8397,12 @@ Many other Wikipedias are available; some of the largest are listed below.
       </p>
       <!-- 
 NewPP limit report
-Parsed by mw1265
-Cached time: 20190201010138
+Parsed by mw1330
+Cached time: 20190201165537
 Cache expiry: 3600
 Dynamic content: true
-CPU time usage: 0.896 seconds
-Real time usage: 1.226 seconds
+CPU time usage: 1.052 seconds
+Real time usage: 1.373 seconds
 Preprocessor visited node count: 4283/1000000
 Preprocessor generated node count: 0/1500000
 Post‐expand include size: 263851/2097152 bytes
@@ -8412,23 +8412,23 @@ Expensive parser function count: 9/500
 Unstrip recursion depth: 1/20
 Unstrip post‐expand size: 18447/5000000 bytes
 Number of Wikibase entities loaded: 0/400
-Lua time usage: 0.359/10.000 seconds
+Lua time usage: 0.415/10.000 seconds
 Lua memory usage: 15.97 MB/50 MB
 -->
       <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%  812.501      1 -total
- 18.94%  153.853      2 Template:Lang
- 10.87%   88.351      1 Template:Reflist
- 10.80%   87.776     12 Template:Navbox
-  8.74%   70.991      1 Template:Cite_document
-  6.13%   49.811      2 Template:IPAc-en
-  5.69%   46.227      1 Template:Ombox
-  5.16%   41.959      1 Template:Pp-semi-indef
-  4.77%   38.721      5 Template:Sidebar
-  4.11%   33.377      1 Template:Short
+100.00%  881.692      1 -total
+ 20.06%  176.827      2 Template:Lang
+  9.64%   85.000      1 Template:Reflist
+  8.08%   71.242     12 Template:Navbox
+  7.77%   68.529      1 Template:Cite_document
+  6.54%   57.638      2 Template:IPAc-en
+  5.52%   48.629      5 Template:Sidebar
+  5.47%   48.208      1 Template:Ombox
+  5.36%   47.284      1 Template:Pp-semi-indef
+  4.37%   38.507      1 Template:External_media
 -->
-      <!-- Saved in parser cache with key enwiki:pcache:idhash:63948-0!canonical and timestamp 20190201010136 and revision id 875800275
+      <!-- Saved in parser cache with key enwiki:pcache:idhash:63948-0!canonical and timestamp 20190201165535 and revision id 875800275
  -->
      </div>
      <noscript>
@@ -9479,7 +9479,7 @@ additional terms may apply.  By using this site, you agree to the
    </div>
   </div>
   <script>
-   (window.RLQ=window.RLQ||[]).push(function(){mw.config.set({"wgPageParseReport":{"limitreport":{"cputime":"0.896","walltime":"1.226","ppvisitednodes":{"value":4283,"limit":1000000},"ppgeneratednodes":{"value":0,"limit":1500000},"postexpandincludesize":{"value":263851,"limit":2097152},"templateargumentsize":{"value":4898,"limit":2097152},"expansiondepth":{"value":13,"limit":40},"expensivefunctioncount":{"value":9,"limit":500},"unstrip-depth":{"value":1,"limit":20},"unstrip-size":{"value":18447,"limit":5000000},"entityaccesscount":{"value":0,"limit":400},"timingprofile":["100.00%  812.501      1 -total"," 18.94%  153.853      2 Template:Lang"," 10.87%   88.351      1 Template:Reflist"," 10.80%   87.776     12 Template:Navbox","  8.74%   70.991      1 Template:Cite_document","  6.13%   49.811      2 Template:IPAc-en","  5.69%   46.227      1 Template:Ombox","  5.16%   41.959      1 Template:Pp-semi-indef","  4.77%   38.721      5 Template:Sidebar","  4.11%   33.377      1 Template:Short"]},"scribunto":{"limitreport-timeusage":{"value":"0.359","limit":"10.000"},"limitreport-memusage":{"value":16744187,"limit":52428800}},"cachereport":{"origin":"mw1265","timestamp":"20190201010138","ttl":3600,"transientcontent":true}}});mw.config.set({"wgBackendResponseTime":102,"wgHostname":"mw1253"});});
+   (window.RLQ=window.RLQ||[]).push(function(){mw.config.set({"wgPageParseReport":{"limitreport":{"cputime":"1.052","walltime":"1.373","ppvisitednodes":{"value":4283,"limit":1000000},"ppgeneratednodes":{"value":0,"limit":1500000},"postexpandincludesize":{"value":263851,"limit":2097152},"templateargumentsize":{"value":4898,"limit":2097152},"expansiondepth":{"value":13,"limit":40},"expensivefunctioncount":{"value":9,"limit":500},"unstrip-depth":{"value":1,"limit":20},"unstrip-size":{"value":18447,"limit":5000000},"entityaccesscount":{"value":0,"limit":400},"timingprofile":["100.00%  881.692      1 -total"," 20.06%  176.827      2 Template:Lang","  9.64%   85.000      1 Template:Reflist","  8.08%   71.242     12 Template:Navbox","  7.77%   68.529      1 Template:Cite_document","  6.54%   57.638      2 Template:IPAc-en","  5.52%   48.629      5 Template:Sidebar","  5.47%   48.208      1 Template:Ombox","  5.36%   47.284      1 Template:Pp-semi-indef","  4.37%   38.507      1 Template:External_media"]},"scribunto":{"limitreport-timeusage":{"value":"0.415","limit":"10.000"},"limitreport-memusage":{"value":16744187,"limit":52428800}},"cachereport":{"origin":"mw1330","timestamp":"20190201165537","ttl":3600,"transientcontent":true}}});mw.config.set({"wgBackendResponseTime":1556,"wgHostname":"mw1330"});});
   </script>
  </body>
 </html>
